update: Kotlin In Action - 2장. 코틀린 기초

--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -162,6 +162,84 @@ println("Hello, ${name}") // 결과는 같다.
 
 - 중괄호로 둘러싼 식 안에서 큰 따옴표를 사용할 수도 있다.
 
+## 2.2 클래스와 프로퍼티
+
+- 다음 자바 코드와 코틀린 코드는 같다.
+
+```java
+public class Person {  
+    private final String name;  
+  
+    public Person(String name) {  
+        this.name = name;  
+    }  
+  
+    public String getName() {  
+        return name;  
+    }  
+}
+```
+
+```kotlin
+class Person(val name: String)
+```
+
+- 이렇게 코드 없이 데이터만 저장하는 클래스를 값 객체(value object)라 부른다.
+- 다양한 언어가 값 객체를 간결하게 기술할 수 있는 구문을 제공한다.
+
+- 코틀린의 기본 가시성은 public 이므로 이런 클래스에서는 변경자를 생략해도 된다.
+
+### 2.2.1 프로퍼티
+
+>[!summary] 프로퍼티란
+> 필드와 접근자를 합한 개념
+> - 필드는 데이터 저장을 위한 개념
+> - 접근자는 그 데이터에 접근하기 위한 개념
+> - 프로퍼티는 필드와 접근자를 합쳐서 부르기 위한 개념인 것이다.
+
+- 코틀린 프로퍼티는 자바의 필드와 접근자 메서드를 완전히 대신한다.
+- val 로 선언한 프로퍼티는 읽기 전용
+- var 로 선언한 프로퍼티는 변경 가능
+
+![[Kotlin In Action - 리스트 2.5 클래스 안에서 변경 가능한 프로퍼티 선언하기.png]]
+
+- 기본적으로 코틀린에서 프로퍼티를 선언하는 방식은 프로퍼티와 관련 있는 접근자를 선언하는 것이다.
+	- 읽기 전용 프로퍼티는 Getter 만 선언한다.
+	- 변경 가능 프로퍼티는 Getter, Setter 모두 선언한다.
+- 코틀린은 
+	- 값을 저장하기 위한 비공개 필드
+	- 그 필드에 값을 저장하기 위한 Setter
+	- 필드의 값을 읽기 위한 Getter
+	- 로 이뤄진 간단한 디폴트 접근자 구현을 제공한다.
+
+- 이는 어떤 언어를 정의했느냐와 관계없이 자바 클래스와 코틀린 클래스를 동일한 방식으로 사용할 수 있다는 뜻이다.
+
+![[Kotlin In Action - 리스트 2.6 자바에서 Person 클래스를 사용하는 방법.png]]
+
+- 자바와 코틀린에서 정의한 Person 클래스 중 어느 쪽을 사용해도 위 코드를 바꿀 필요가 없다.
+
+- Getter 와 Setter 의 이름을 정하는 규칙에는 예외가 있다.
+- 이름이 is 로 시작하는 프로퍼티의 Getter 에는 get 이 붙지 않고 원래 이름을 그대로 사용한다.
+- Setter 에는 is 를 set 으로 바꾼 이름을 사용한다.
+- 따라서 자바에서 isMarried 프로퍼티의 Getter 를 호출하려면 `isMarried()` 를 사용해야 한다.
+
+![[Kotlin In Action - 리스트 2.7 코틀린에서 Person 클래스 사용하기.png]]
+
+- Getter 를 호출하는 대신 프로퍼티를 직접 사용했다.
+
+> [!tip] 자바에서 선언한 클래스에 대해 코틀린 문법을 사용해도 된다.
+> - 코틀린에서는 자바 클래스의 Getter 를 val 프로퍼티처럼 사용할 수 있다.
+> - 그리고 Getter/Setter 쌍이 있는 경우에는 var 프로퍼티처럼 사용할 수 있다.
+
+> [!note] 백킹 필드(backing field)
+> - 대부분의 프로퍼티에는 그 프로퍼티의 값을 저장하기 위한 필드가 있다.
+> - 이를 프로퍼티를 뒷받침하는 필드(backing field)라고 부른다.
+> - 하지만 원한다면 프로퍼티 값을 그때그때 계산할 수도 있다.
+> - 커스텀 게터를 작성하면 그런 백킹 필드가 없는 프로퍼티를 만들 수 있다.
+
+### 2.2.2 커스텀 접근자
+
+
 
 
 
