update: Kotlin In Action - 2장. 코틀린 기초

--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -239,6 +239,26 @@ class Person(val name: String)
 
 ### 2.2.2 커스텀 접근자
 
+```kotlin
+class Rectangle(val height: Int, val width: Int) {  
+    val isSquare: Boolean  
+        get() { // 프로퍼티 게터 선언  
+            return height == width  
+        }
+        // get() = height == width 라고 해도 된다.
+}
+```
+
+- 위 코드에서 `isSquare` 프로퍼티에는 자체 값을 저장하는 필드가 필요 없다.
+- 클라이언트가 프로퍼티에 접근할 때마다 Getter 가 프로퍼티 값을 매번 다시 계산한다.
+
+- 이 접근자를 자바에서 사용하려면 isSquare 메서드를 호출하면 된다.
+
+> [!note] 파라미터가 없는 함수를 정의하는 방식 vs 커스텀 게터를 정의하는 방식
+> - 두 방식 모두 비슷하다.
+> - 구현이나 성능상 차이는 없다.
+> - 차이나는 부분은 가독성뿐이다.
+> - 일반적으로 클래스의 특성(프로퍼티에는 특성이라는 뜻이 있다)을 정의하고 싶다면 프로퍼티로 그 특성을 정의해야 한다.
 
 
 
