--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -260,6 +260,50 @@ class Rectangle(val height: Int, val width: Int) {
 > - 차이나는 부분은 가독성뿐이다.
 > - 일반적으로 클래스의 특성(프로퍼티에는 특성이라는 뜻이 있다)을 정의하고 싶다면 프로퍼티로 그 특성을 정의해야 한다.
 
+### 2.2.3 코틀린 소스코드 구조: 디렉터리와 패키지
+
+- 코틀린에도 자바와 비슷한 개념의 패키지가 있다.
+- 모든 코틀린 파일의 맨 앞에 package 문을 넣을 수 있다.
+- 같은 패키지에 속해 있다면 다른 파일에서 정의한 선언일지라도 직접 사용할 수 있다.
+- 반면 다른 패키지에 정의한 선언을 사용하려면 임포트를 통해 선언을 불러워야 한다.
+
+![[Kotlin In Action - 리스트 2.8 클래스와 함수 선언을 패키지에 넣기.png]]
+
+- 코틀린에서는 클래스 임포트와 함수 임포트에 차이가 없으며, 모든 선언을 inport 키워드로 가져올 수 있다.
+- 최상위 함수는 그 이름을 써서 임포트할 수 있다.
+
+![[Kotlin In Action - 리스트 2.9 다른 패키지에 있는 함수 임포트하기.png]]
+
+- 패키지 이름 뒤에 `.*` 를 추가하면 패키지 안의 모든 선언을 임포트할 수 있다.
+- 이런 스타 임포트를 사용하면 패키지 안에 있는 모든 클래스뿐 아니라 최상위에 정의된 함수나 프로퍼티까지 모두 불러온다.
+
+#### 자바의 디렉터리와 패키지
+
+- 자바에서는 패키지의 구조와 일치하는 디렉터리 계층 구조를 만들고 클래스의 소스코드를 그 클래스가 속한 패키지와 같은 디렉터리에 위치시켜야 한다.
+
+![[Kotlin In Action - 그림 2.2 자바에서는 디렉터리 구조가 패키지 구조를 그대로 따라야 한다.png]]
+
+#### 코틀린의 디렉터리와 패키지
+
+>[!note]
+> 코틀린에서는 여러 클래스를 한 파일에 넣을 수 있고, 파일의 이름도 마음대로 정할 수 있다.
+
+![[Kotlin In Action - 그림 2.3 패키지 구조와 디렉터리 구조가 맞아 떨어질 필요는 없다.png]]
+
+> [!warning] 코틀린에서 디렉터리와 패키지 설정 시 주의점
+> 대부분의 경우 자바와 같이 패키지별로 디렉터리를 구성하는 편이 낫다.
+
+- 특히 자바와 코틀린을 함께 사용하는 프로젝트에서는 자바의 방식을 따르는 게 중요하다.
+- 자바의 방식을 따르지 않으면 자바 클래스를 코틀린 클래스로 마이그레이션할 떄 문제가 생길 수도 있다.
+- 하지만 여러 클래스를 나 파일에 넣는 것을 주저해서는 안 된다.
+- 특히 각 클래스를 정의하는 소스코드 크기가 아주 작은 경우 더욱 그렇다.
+
+
+
+
+
+
+
 
 
 
