--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -298,6 +298,62 @@ class Rectangle(val height: Int, val width: Int) {
 - 하지만 여러 클래스를 나 파일에 넣는 것을 주저해서는 안 된다.
 - 특히 각 클래스를 정의하는 소스코드 크기가 아주 작은 경우 더욱 그렇다.
 
+## 2.3 선택 표현과 처리: enum과 when
+
+### 2.3.1 enum 클래스 정의
+
+![[Kotlin In Action - 리스트 2.10 간단한 enum 클래스 정의하기.png]]
+
+- 코틀린에서 enum 은 소프트 키워드(soft keyword)라 부르는 존재다.
+- enum 은 class 앞에 있을 때는 특별한 의미를 지니지만 다른 곳에서는 이름에 사용할 수 있다.
+
+- 반면 class 는 키워드다.
+- 따라서 class 라는 이름을 사용할 수 없으므로 클래스를 표현하는 변수 등을 정의할 떄는 clazz 나 aClass 와 같은 이름을 사용해야 한다.
+
+- enum 클래스 안에도 프로퍼티나 메서드를 정의할 수 있다.
+- enum 클래스 안에 메서드를 정의하는 경우 반드시 enum 상수 목록과 메서드 정의 사이에 세미콜론을 넣어야 한다.
+
+![[Kotlin In Action - 리스트 2.11 프로퍼티와 메서드가 있는 enum 클래스 선언하기.png]]
+
+### 2.3.2 when 으로 enum 클래스 다루기
+
+- 자바의 switch 에 해당하는 코틀린 구서 요소는 when 이다.
+- if 와 마찬가지로 when 도 값을 만들어내는 식이다.
+	- 따라서 식이 본문인 함수에 when 을 바로 사용할 수 있다.
+
+![[Kotlin In Action - 리스트 2.12 when 을 사용해 올바른 enum 값 찾기.png]]
+
+- 앞의 코드는 color 로 전달된 값과 같은 분기를 찾아 그 분기를 실행한다.
+- 자바와 달리 각 분기의 끝에 break 를 넣지 않아도 된다.
+
+- 한 분기 안에서 여러 값을 매치 패턴으로 사용할 수도 있는데, 그럴 경우 값 사이를 콤마(,)로 분리한다.
+
+![[Kotlin In Action - 리스트 2.13 한 when 분기 안에 여러 값 사용하기.png]]
+
+- 앞의 예제들에서는 Color 라는 enum 클래스 이름을 enum 상수 이름 앞에 붙인 전체 이름을 사용했다.
+- 상수 값을 임포트하면 이 코드를 더 간단하기 만들 수 있다.
+
+![[Kotlin In Action - 리스트 2.14 enum 상수 값을 임포트해서 enum 클래스 수식자 없이 enum 사용하기.png]]
+
+### 2.3.3 when 과 임의의 객체를 함께 사용
+
+- 코틀린 when 의 분기 조건은 임의의 객체를 허용한다.
+
+![[Kotlin In Action - 리스트 2.15 when의 분기 조건에 여러 다른 객체 사용하기.png]]
+
+- when 식은 인자 값과 매치하는 조건 값을 찾을 떄까지 각 분기를 검사한다.
+- `setOf(c1, c2)` 와 분기 조건에 있는 객체 사이를 매치할 때 동등성(equality)을 사용한다.
+- 모든 분기 식에서 만족하는 조건을 찾을 수 없다면 else 분기의 문장을 계산한다.
+
+- when 의 분기 조건 부분에 식을 넣을 수 있다.
+- (코틀린 1.3 부터는 `when()`의 괄호 안에서 검사 대상을 변수에 포획해서 새로운 이름으로 부를 수 있다.)
+
+
+
+
+
+
+
 
 
 
