update: Kotlin In Action - 2장. 코틀린 기초

--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -348,6 +348,18 @@ class Rectangle(val height: Int, val width: Int) {
 - when 의 분기 조건 부분에 식을 넣을 수 있다.
 - (코틀린 1.3 부터는 `when()`의 괄호 안에서 검사 대상을 변수에 포획해서 새로운 이름으로 부를 수 있다.)
 
+### 2.3.4 인자 없는 when 사용
+
+- 앞 예제의 코드는 함수가 호출될 때마다 여러 Set 인스턴스를 생성한다.
+- 이런 함수가 자주 호출된다면 불필요한 가비지 객체가 늘어나는 것을 방지하기 위해 함수를 고쳐 쓰는 편이 낫다.
+- 인자가 없는 when 식을 사용하면 불필요한 객체 생성을 막을 수 있다.
+
+![[Kotlin In Action - 리스트 2.16 인자가 없는 when.png]]
+
+- 위 예제 코드는 추가 객체를 만들지 않는다는 장점이 있지만 가독성은 더 떨어진다.
+
+
+
 
 
 
