--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -358,7 +358,28 @@ class Rectangle(val height: Int, val width: Int) {
 
 - 위 예제 코드는 추가 객체를 만들지 않는다는 장점이 있지만 가독성은 더 떨어진다.
 
+### 2.3.5 스마트 캐스트: 타입 검사와 타입 캐스트를 조합
 
+- (1 + 2) + 4 와 같은 간단한 산술식을 계산하는 함수를 만들어보자.
+
+![[Kotlin In Action - 리스트 2.17 식을 표현하는 클래스 계층.png]]
+
+![[Kotlin In Action - 그림 2.4 Sum(Sum(Num(1), Num(2)), Num(4))이라는 식의 트리 표현.png]]
+
+![[Kotlin In Action - 리스트 2.18 if 연쇄를 사용해 식을 계산하기 - 1.png]]
+![[Kotlin In Action - 리스트 2.18 if 연쇄를 사용해 식을 계산하기 - 2.png]]
+
+- 자바에서는 어떤 변수의 타입을 instanceof 로 확인한 다음에 명시적으로 변수 타입을 캐스팅해야 한다.
+- 하지만 코틀린에서는 어떤 변수가 원하는 타입인지 일단 is 로 검사하고 나면 굳이 변수를 원하는 타입으로 캐스팅 하지 않아도 된다.
+- 컴파일러가 캐스팅을 대신 해주기 때문에 마치 처음부터 그 변수가 원하는 타입으로 선언된 것처럼 사용할 수 있기 때문이다.
+- 이를 스마트 캐스트(smart cast)라고 부른다.
+
+- IDE 를 사용하면 스마트 캐스트 부분의 배경색을 달리 표시해주어서 이런 변환이 자동으로 이뤄졌음을 쉽게 알 수 있다.
+
+- 스마트 캐스트는 is 로 변수에 든 값의 타입을 검사한 다음에 그 값이 봐뀔 수 없는 경우에만 작동한다.
+- 즉, val 변수이어야 한다는 것이다.
+
+- 원하는 타입으로 명시적으로 타입 캐스팅하려면 as 키워드를 사용한다.
 
 
 
