update: Kotlin In Action - 2장. 코틀린 기초

--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -381,6 +381,28 @@ class Rectangle(val height: Int, val width: Int) {
 
 - 원하는 타입으로 명시적으로 타입 캐스팅하려면 as 키워드를 사용한다.
 
+### 2.3.6 리팩토링: if 를 when 으로 변경
+
+- 위 예제를 값을 만들어내는 if 식으로 변경할 수도 있다.
+
+```kotlin
+fun eval(e: Expr): Int =  
+    if (e is Num) {  
+        e.value  
+    } else if (e is Sum) {  
+        eval(e.right) + eval(e.left)  
+    } else {  
+        throw IllegalArgumentException("Unknown expression")  
+    }
+```
+
+- if 의 분기에 식이 하나밖에 없다면 중괄호를 생략해도 된다.
+- if 분기에 블록을 사용하는 경우 그 블록의 마지막 식이 그 분기의 결과 값이다.
+
+![[Kotlin In Action - 리스트 2.20 if 중첩 대신 when 사용하기.png]]
+
+- 타입을 검사하고 나면 스마트 캐스트가 이뤄진다. 따라서 Num이나 Sum의 멤버에 접근할 때 변수를 강제로 캐스팅할 필요가 없다.
+- if 나 when 의 각 분기에서 수행해야 하는 로직이 복잡해지면 분기 본문에 블록을 사용할 수 있다.
 
 
 
