--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -404,6 +404,32 @@ fun eval(e: Expr): Int =
 - 타입을 검사하고 나면 스마트 캐스트가 이뤄진다. 따라서 Num이나 Sum의 멤버에 접근할 때 변수를 강제로 캐스팅할 필요가 없다.
 - if 나 when 의 각 분기에서 수행해야 하는 로직이 복잡해지면 분기 본문에 블록을 사용할 수 있다.
 
+### 2.3.7 if 와 when 의 분기에서 블록 사용
+
+- if 와 when 모두 분기에 블록을 사용할 수 있다.
+- 그런 경우 블록의 마지막 문장이 블록 전체의 결과가 된다.
+
+```kotlin
+fun evalWithLogging(e: Expr): Int =  
+    when (e) {  
+        is Num -> {  
+            println("num: ${e.value}")  
+            e.value  
+        }  
+        is Sum -> {  
+            val left = evalWithLogging(e.left)  
+            val right = evalWithLogging(e.right)  
+            println("sum: $left + $right")  
+            left + right  
+        }  
+        else -> throw IllegalArgumentException("Unknown expression")  
+    }
+```
+
+- "블록의 마지막 식이 블록의 결과" 라는 규칙은 블록이 값을 만들어내야 하는 경우 항상 성립한다.
+- try 본문, catch 절, 람다식 모두 위 규칙이 적용된다.
+- 하지만 함수에 대해서는 성립하지 않는다.
+- 식이 본문인 함수는 블록을 본문으로 가질 수 없고, 블록이 본문인 함수는 내부에 return 문이 반드시 있어야 한다.
 
 
 
