--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -431,13 +431,40 @@ fun evalWithLogging(e: Expr): Int =
 - 하지만 함수에 대해서는 성립하지 않는다.
 - 식이 본문인 함수는 블록을 본문으로 가질 수 없고, 블록이 본문인 함수는 내부에 return 문이 반드시 있어야 한다.
 
+## 2.4 대상을 이터레이션: while 과 for 루프
 
+### 2.4.1 while 루프
 
+- 코틀린 while 루프는 자바와 동일하다.
 
+### 2.4.2 수에 대한 이터레이션: 범위와 수열
 
+- 코틀린에는 자바의 for 루트에 해당하는 요소가 없다.
+- 코틀린에서는 범위(range)를 사용한다.
 
+- 범위는 기본적으로 두 값으로 이뤄진 구간이다.
+- 보통 그 두 값은 정수 등의 숫자 타입의 값이며, `..` 연산자로 시작 값과 끝 값을 연결해서 범위를 만든다.
 
+```kotlin
+val oneToTen = 1..10
+```
 
+- 코틀린의 범위는 양끝을 포함하는 구간이다.
+
+- 정수 범위로 수행할 수 있는 가장 단순한 작업은 범위에 속한 모든 값에 대한 이터레이션이다.
+- 이런 식으로 어떤 범위에 속한 값을 일정한 순서로 이터레이션하는 경우를 수열(progression)이라고 부른다.
+
+```kotlin
+for (i in 1..100) { // 1 부터 100까지 1 씩 올라간다.  
+    //...
+}
+for (i in 100 downTo 1 step 2) { // 100 부터 1까지 -2 씩 내려간다.  
+    // ...
+}  
+for (i in 1 until 100) { // 1 부터 99까지 1 씩 올라간다.  
+	// ...
+}
+```
 
 
 
