--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -466,6 +466,27 @@ for (i in 1 until 100) { // 1 부터 99까지 1 씩 올라간다.
 }
 ```
 
+### 2.4.3 맵에 대한 이터레이션
+
+```kotlin
+val binaryReps = TreeMap<Char, String>()  
+for (c in 'A'..'F') { // A 부터 F 까지 문자의 범위를 사용해 이터레이션한다.  
+    val binary = Integer.toBinaryString(c.code)  
+    binaryReps[c] = binary // binaryReps.put(c, binary)와 같은 코드다.
+}
+
+for ((letter, binary) in binaryReps) { // key: letter, value: binary  
+    println("$letter = $binary")  
+}
+```
+
+```kotlin
+val list = arrayListOf("10", "11", "1001")  
+for ((index, element) in list.withIndex()) {  
+    println("$index: $element")  
+}
+```
+
 
 
 
