--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -487,7 +487,39 @@ for ((index, element) in list.withIndex()) {
 }
 ```
 
+### 2.4.4 in 으로 컬렉션이나 범위의 원소 검사
 
+```kotlin
+fun isLetter(c: Char) = c in 'a'..'z' || c in 'A'..'Z'  
+fun isNotDigit(c: Char) = c !in '0'..'9'
+```
+
+```kotlin
+fun recognize(c: Char) = when (c) {  
+    in '0'..'9' -> "It's a digit!"  
+    in 'a'..'z', in 'A'..'Z' -> "It's a letter"  
+    else -> "I don't know"  
+}
+```
+
+- 범위는 문자에만 국한되지 않는다.
+- 비교가 가능한 클래스라면(java.lang.Comparable 인터페이스를 구현한 클래스라면) 그 클래스의 인스턴스 객체를 사용해 범위를 만들 수 있다.
+
+- Comparable 을 사용하는 범위의 경우 그 범위 내의 모든 객체를 항상 이터레이션하지는 못한다.
+- 예를 들어 "Java" 와 "Kotlin" 사이의 모든 문자열을 이터레이션할 수 있을까? 없다.
+
+- 하지만 in 연산자를 사용하면 값이 범위 안에 속하는지 항상 결정할 수 있다.
+- String 에 있는 Comparable 구현이 두 문자열을 알파벳 순서로 비교하기 때문에 in 검사에서도 문자열을 알파벳 순서로 비교한다.
+
+```kotlin
+println("Kotlin" in "Java".."Scala")
+```
+
+- 컬렉션에도 마찬가지로 in 연산을 사용할 수 있다.
+
+```kotlin
+println("Kotlin" in setOf("Java", "Scala"))
+```
 
 
 
