--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -521,6 +521,54 @@ println("Kotlin" in "Java".."Scala")
 println("Kotlin" in setOf("Java", "Scala"))
 ```
 
+## 2.5 코틀린의 예외 처리
+
+- 코틀린의 기본 예외 처리 구문은 자바와 비슷하다.
+
+```kotlin
+if (percentage !in 0..100) {  
+    throw IllegalArgumentException("A percentage value must be between 0 and 100: $percentage")  
+}
+```
+
+- 예외 인스턴스를 만들 때도 new 를 붙일 필요가 없다.
+
+- 자바와 달리 코틀린의 throw 는 식이므로 다른 식에 포함될 수 있다.
+
+```kotlin
+val percentage =   
+    if (number in 0..100)  
+        number  
+    else  
+        throw IllegalArgumentException("A percentage value must be between 0 and 100: $number")
+```
+
+### 2.5.1 try, catch, finally
+
+```kotlin
+fun readNumber(reader: BufferedReader): Int? {  
+    try {  
+        val line = reader.readLine()  
+        return Integer.parseInt(line)  
+    } catch (e: NumberFormatException) {  
+        return null  
+    } finally {  
+        reader.close()  
+    }  
+}
+```
+
+- 자바 코드와 가장 큰 차이는 throws 절이 코드에 없다는 점이다.
+- 자바에서는 체크 예외를 명시적으로 처리해야 한다.
+- 코틀린에서는 체크 예외와 언체크 예외(unchecked exception)를 구별하지 않는다.
+- 코틀린에서는 함수가 던지는 예외를 지정하지 않고 발생한 예외를 잡아내도 되고 잡아내지 않아도 된다.
+
+- 자바 7의 자원을 사용하는 try-with-resource 와 같은 문법은 코틀린에 없다.
+- 하지만 라이브러리 함수로 같은 기능을 구현한다.
+
+### 2.5.2 try 를 식으로 사용
+
+
 
 
 
