--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -568,7 +568,18 @@ fun readNumber(reader: BufferedReader): Int? {
 
 ### 2.5.2 try 를 식으로 사용
 
+```kotlin
+fun readNumber(reader: BufferedReader) {  
+    val number = try {  
+        Integer.parseInt(reader.readLine())  
+    } catch (e: NumberFormatException) {  
+        return
+    }  
+    println(number)  
+}
+```
 
-
-
+- 코틀린의 try 키워드는 if 나 when 과 마찬가지로 식이다.
+- if 와 달리 try 의 본문을 반드시 중괄호로 둘러 ㅆKdi gksek.
+- try 도 마지막 식의 값이 전체 결과 값이다.
 
