--- a/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
+++ b/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
@@ -4,3 +4,36 @@ tags:
   - 책_Kotlin_In_Action
   - Kotlin
 ---
+**3장에서 다루는 내용**
+
+- 컬렉션, 문자열, 정규식을 다루기 위한 함수
+- 이름 붙인 인자, 디폴트 파라미터 값, 중위 호출 문법 사용
+- 확장 함수와 확장 프로퍼티를 사용해 자바 라이브러리 적용
+- 최상위 및 로컬 함수와 프로퍼티를 사용해 코드 구조화
+
+# 3.1 코틀린에서 컬렉션 만들기
+
+```kotlin
+val set = hashSetOf(1, 4, 3)  
+val list = arrayListOf(1, 7, 43)  
+val map = hashMapOf(1 to "sdf", 3 to "ss", 34 to "sdf")  
+
+println(set.javaClass)  // class java.util.HashSet
+println(list.javaClass) // class java.util.ArrayList
+println(map.javaClass)  // class java.util.HashMap
+```
+
+- set, list, map 에 대한 javaClass 들을 출력해보니 모두 자바 java.util 에 담겨있다.
+- 즉, 코틀린은 자신만의 컬렉션 기능을 제공하지 않는다는 뜻이다.
+- 자바 개발자가 기존 자바 커렉션을 활용할 수 있다는 뜻이기도 하다.
+
+- 코틀린이 자체 컬렉션을 제공하지 않는 이유는 표준 자바 컬렉션을 활용하면 자바 코드와 상호작용하기가 훨씬 쉽기 때문이다.
+- 자바에서 코틀린 함수를 호출하거나 코틀린에서 자바 함수를 호출할 때 자바와 코틀린 컬렉션을 서로 변화할 필요가 없다.
+
+
+
+
+
+
+
+
