--- a/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
+++ b/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
@@ -116,10 +116,87 @@ String joinToString(Collection<T> collection, String separator);
 String joinToString(Collection<T> collection);
 ```
 
+### 3.2.3 정적인 유틸리티 클래스 없애기: 최상위 함수와 프로퍼티
 
+- 자바 개발을 하다보면 어느 한 클래스에 포함시키기 어려운 코드가 많이 생긴다.
+- 그 결과 다양한 정적 메서드를 모아두는 역할만 담당하며, 특별한 상태나 인스턴스 메서드는 없는 클래스가 생겨난다.
+	- 대표적으로 JDK 의 Collections 클래스가 전형적인 예다.
 
+- 코틀린에서는 이런 무의미한 클래스가 필요 없다.
+- 대신 함수를 직접 소스 파일의 최상위 수준, 모든 다른 클래스의 밖에 위치시키면 된다.
+- 그런 함수들은 여전히 그 파일의 맨 앞에 정의된 패키지의 멤버 함수이므로 다른 패키지에서 그 함수를 사용하고 싶을 때는 그 함수가 정의된 패키지를 임포트해야만 한다.
 
+- 이 함수는 어떻게 실행될 수 있는 것일까?
+- JVM 이 클래스 안에 들어있는 코드만을 실행할 수 있기 때문에 컴파일러는 이 파일을 컴파일할 때 새로운 클래스를 정의해준다.
+- 코틀린만 사용하는 경우에는 그냥 그런 클래스가 생긴다는 사실만 기억하면 된다.
 
+- 하지만 이 함수를 자바 등의 다른 JVM 언어에서 호출하고 싶다면 코드가 어떻게 컴파일되는지 알아야 최상위 함수를 사용할 수 있다.
+
+```kotlin
+// join.kt 파일
+package strings
+
+fun joinToString(...): String { ... }
+```
+
+- 위 코틀린 파일을 컴파일한 결과와 같은 클래스를 자바 코드로 써보면 아래와 같다.
+
+```java
+package strings
+
+public class JoinKt {
+	public static String joinToString(...) { ... }
+}
+```
+
+- 코틀린 컴파일러가 생성하는 클래스의 이름은 최상위 함수가 들어있던 코틀린 소스 파일의 이름과 대응한다.
+- 코틀린 파일의 모든 최상위 함수는 이 클래스의 정적인 메서드가 된다.
+- 따라서 자바에서 `joinToString` 을 호출하려면 아래와 같이 하면 된다.
+
+```java
+import strings.JoinKt;
+...
+JoinKt.joinToString(list, ", ", "", "");
+```
+
+> [!note] 파일에 대응하는 클래스의 이름 변경하기
+> 코틀린 최상위 함수가 포함되는 클래스의 이름을 바꾸고 싶다면 파일에 `@JvmName` 을 추가하자.
+> `@JvmName` 은 파일의 맨 앞, 패키지 이름 선언 이전에 위치해야 한다.
+> 
+
+```kotlin
+@file:JvmName("StringFunction")
+
+package strings
+
+fun joinToString(...): String { ... }
+```
+
+- 이제 자바에서 `joinToString` 함수를 호출할 때 `StringFunction.joinToString(list, ", ", "", "");` 으로 호출할 수 있게 되었다.
+
+#### 최상위 프로퍼티
+
+- 함수와 마찬가지로 프로퍼티도 파일의 최상위 수준에 놓을 수 있다.
+- 이런 프로퍼티의 값은 정적 필드에 저장된다.
+
+- 최상위 프로퍼티를 활용해 코드에 상수를 추가할 수 있다.
+
+- 기본적으로 최상위 프로퍼티도 다른 모든 프로퍼티처럼 접근자 메서드를 통해 자바 코드에 노출된다.
+	- val 의 경우 Getter, var 의 경우 Geter 와 Setter
+
+- 더 자연스럽게 사용하려면 이 상수를 `public static final` 필드로 컴파일해야 한다.
+- const 변경자를 추가하면 프로퍼티를 `public static final` 필드로 컴파일하게 만들 수 있다.
+	- 단, 원시 타입과 String 타입의 프로퍼티만 const 로 지정할 수 있다.
+
+```kotlin
+const val UNIX_LINE_SEPARATOR = "\n"
+```
+
+- 위 코틀린 코드는 아래 자바 코드와 동등한 바이트코드를 만들어낸다.
+
+```java
+public static final String UNIX_LINE_SEPARATOR = "\n";
+```
 
 
 
