--- a/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
+++ b/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
@@ -198,6 +198,53 @@ const val UNIX_LINE_SEPARATOR = "\n"
 public static final String UNIX_LINE_SEPARATOR = "\n";
 ```
 
+## 3.3 메서드를 다른 클래스에 추가: 확장 함수와 확장 프로퍼티
+
+- 확장 함수(extension function)는 기존 자바 API 를 재작성하지 않고도 코틀린이 제공하는 여러 편리한 기능을 사용할 수 있게 해준다.
+
+- 확장함수는 어떤 클래스의 멤버 메서드인 것처럼 호출할 수 있지만 그 클래스 밖에 선언된 함수다.
+
+```kotlin
+fun String.lastChar(): Char = this.get(this.length - 1)
+```
+
+- 확장 함수를 만들려면 추가하려는 함수 이름 앞에 그 함수가 확장할 클래스의 이름을 덧붙이기만 하면 된다.
+
+- 클래스 이름을 **수신 객체 타입**(receiver type) 이라 부르며, 
+- 확장 함수가 호출되는 대상이 되는 값(객체)을 **수신 객체**(receiver object)라고 부른다.
+
+![[Kotlin In Action - 그림 3.1 수신 객체 타입은 확장이 정의될 클래스의 타입이며, 수신 객체는 그 .png]]
+
+- 위 함수를 호출하는 구문은 다른 일반 클래스 멤버를 호출하는 구문과 같다.
+
+```kotlin
+println("Kotlin".lastChar())
+```
+
+- 어떤 면에서 이는 String 클래스에 새로운 메서드를 추가하는 것과 같다.
+- 확장에는 언어도 중요하지 않다.
+	- Groovy 와 같은 다른 JVM 언어로 작성된 클래스도 확장할 수 있다.
+- 자바 클래스로 컴파일한 클래스 파일이 있는 한 그 클래스에 원하는 대로 확장을 추가할 수 있다.
+
+- 일반 메서드의 본문에서 this 를 사용할 떄와 마찬가지로 확장 함수 본문에도 this 를 쓸 수 있다.
+- 그리고 일반 메서드와 마찬가지로 확장 함수 본문에서도 this를 생략할 수 있다.
+
+```kotlin
+fun String.lastChar(): Char = get(length - 1)
+```
+
+- 확장 함수 내부에서는 일반적인 인스턴스 메서드의 내부에서와 마찬가지로 수신 객체의 메서드나 프로퍼티를 바로 사용할 수 있다.
+- 하지만 확장함수가 캡슐화를 꺠지는 않는다.
+- 클래스 안에서 정의한 메서드와 달리 확장 함수 안에서는 클래스 내부에서만 사용할 수 있는 비공개(private) 멤버나 보호된(protected) 멤버를 사용할 수 없다.
+
+- 호출하는 쪽에서는 확장 함수와 멤버 메서드를 구분할 수 없다.
+- 그리고 호출하는 메서드가 확장 함수인지 멤버 메서드인지 여부가 중요한 경우도 거의 없다.
+
+
+
+
+
+
 
 
 
