update: Kotlin In Action - 3장. 함수 정의와 호출

--- a/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
+++ b/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
@@ -240,6 +240,37 @@ fun String.lastChar(): Char = get(length - 1)
 - 호출하는 쪽에서는 확장 함수와 멤버 메서드를 구분할 수 없다.
 - 그리고 호출하는 메서드가 확장 함수인지 멤버 메서드인지 여부가 중요한 경우도 거의 없다.
 
+### 3.3.1 임포트와 확장 함수
+
+- 확장 함수를 정의했다고 해도 자동으로 프로젝트 안의 모든 소스코드에서 그 함수를 사용할 수 있지는 않다.
+- 확장 함수를 사용하기 위해서는 그 함수를 다른 클래스나 함수와 마찬가지로 임포트해야만 한다.
+
+```kotlin
+import strings.lastChar
+
+val c = "Kotlin".lastChar()
+```
+
+```kotlin
+import strings.*
+
+val c = "Kotlin".lastChar()
+```
+
+- as 키워드를 사용하면 임포트한 클래스나 함수를 다른 이름으로 부를 수 있다.
+
+```kotlin
+import strings.lastChar as last
+
+val c = "Kotlin".last()
+```
+
+- 한 파일 안에서 다른 여러 패키지에 속해있는 이름이 같은 함수를 가져와 사용해야 하는 경우 이름을 바꿔서 임포트하면 이름 충돌을 막을 수 있다.
+- 물론 일반적인 클래스나 함수라면 그 전체 이름(FQN, Fully Qualified Name)을 써도 된다.
+
+- 하지만 코틀린 문법상 확장 함수는 반드시 짧은 이름을 써야 한다.
+- 따라서 임포트할 때 이름을 바꾸는 것이 확장 함수 이름 충돌을 해결할 수 있는 유일한 방법이다.
+
 
 
 
