update: Kotlin In Action - 3장. 함수 정의와 호출

--- a/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
+++ b/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
@@ -271,7 +271,17 @@ val c = "Kotlin".last()
 - 하지만 코틀린 문법상 확장 함수는 반드시 짧은 이름을 써야 한다.
 - 따라서 임포트할 때 이름을 바꾸는 것이 확장 함수 이름 충돌을 해결할 수 있는 유일한 방법이다.
 
+### 3.3.2 자바에서 확장 함수 호출
 
+- 내부적으로 확장 함수는 수신 객체를 첫 번째 인자로 받는 정적 메서드다.
+- 그래서 확장 함수를 호출해도 다른 어댑터 객체나 실행 시점 부가 비용이 들지 않는다.
+
+- 그렇기에 자바에서 확장 함수를 사용하는 것도 편하다.
+- 정적 메서드를 호출하면서 첫 번째 인자로 수신 객체를 넘기기만 하면 된다.
+
+- 다른 최상위 함수와 마찬가지로 확장 함수가 들어있는 자바 클래스 이름도 확장 함수가 들어있는 파일 이름에 따라 결정된다.
+- 예를 들어, 확장 함수를 `StringUtil.kt` 파일에 정의했다면 
+	- 자바에서 `char c = StringUtilKt.lastChar("Java");` 와 같이 호출하면 된다.
 
 
 
