update: Kotlin In Action - 3장. 함수 정의와 호출

--- a/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
+++ b/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
@@ -283,6 +283,52 @@ val c = "Kotlin".last()
 - 예를 들어, 확장 함수를 `StringUtil.kt` 파일에 정의했다면 
 	- 자바에서 `char c = StringUtilKt.lastChar("Java");` 와 같이 호출하면 된다.
 
+### 3.3.3 확장 함수로 유틸리티 함수 정의
+
+```kotlin
+fun <T> Collection<T>.joinToString(  
+    separator: String = ", ",  
+    prefix: String = "",  
+    postfix: String = ""  
+): String {  
+    val result = StringBuilder(prefix)  
+  
+    for ((index, element) in this.withIndex()) {  
+        if (index > 0) result.append(separator)  
+        result.append(element)  
+    }  
+    result.append(postfix)  
+    return result.toString()  
+}
+```
+
+- 원소로 이뤄진 컬렉션에 대한 확장을 만든다.
+- 그리고 모든 인자에 대한 디폴트 값을 지정한다.
+- 이제 `joinToString` 을 마치 클래스의 멤버인 것처럼 호출할 수 있다.
+
+
+> [!note] 확장 함수는 단지 정적 메서드 호출에 대한 문법적 편의(syntatic sugar)일 뿐이다.
+
+- 그래서 클래스가 아닌 더 구체적인 타입을 수신 객체 타입으로 지정할 수도 있다.
+- 예를 들어, 문자열의 컬렉션에 대해서 호출할 수 있는 `join` 함수를 정의하고 싶다면 다음과 같이 하면 된다.
+
+```kotlin
+fun Collection<String>.join(  
+    separator: String = ", ",  
+    prefix: String = "",  
+    postfix: String = ""  
+) = joinToString(separator, prefix, postfix)
+```
+
+- 이 함수를 String 이 아닌 다른 객체 리스트에 대해 호출할 수는 없다.
+
+- 확장 함수가 정적 메서드와 같은 특징을 가지므로, 확장 함수를 하우 키르래스에서 오버라이드할 수는 없다.
+
+
+
+
+
+
 
 
 
