update: Kotlin In Action - 3장. 함수 정의와 호출

--- a/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
+++ b/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
@@ -324,9 +324,31 @@ fun Collection<String>.join(
 
 - 확장 함수가 정적 메서드와 같은 특징을 가지므로, 확장 함수를 하우 키르래스에서 오버라이드할 수는 없다.
 
+### 3.3.4 확장 함수는 오버라이드할 수 없다.
 
+> [!tip] 동적 디스패치와 정적 디스패치
+> 동적 디스패치(dynamic dispatch)
+> - 실행 시점에 객체 타입에 따라 동적으로 호출될 대상 메서드를 결정하는 방식
+> 
+> 정적 디스패치(static dispatch)
+> - 컴파일 시점에 알려진 변수 타입에 따라 정해진 메서드를 호출하는 방식
+> 
+> 프로그래밍 언어 용어에서 "정적" 이라는 말은 컴파일 시점을 의미하고, "동적" 이라는 말은 실행 시점을 의미한다.
 
+- 확장 함수는 클래스의 일부가 아니다.
+- 확장 함수는 클래스 밖에 선언된다.
+- 따라서 변수의 정적 타입에 의해 어떤 확장 함수가 호출될지 결정되지, 그 변수에 저장된 객체의 동적인 타입에 의해 확장 함수가 결정되지 않는다.
+- 코틀린은 호출될 확장 함수를 정적으로 결정한다.
 
+![[Kotlin In Action - 그림 3.2 확장 함수는 클래스의 밖에 선언된다.png|400]]
+
+> [!note]
+> 어떤 클래스를 확장한 함수와 그 클래스의 멤버 함수의 이름과 시그니처가 같다면 확장 함수가 아니라 멤버 함수가 호출된다(멤버 함수의 우선순위가 더 높다).
+> 
+> 클래스 API 를 변경할 경우 항상 이를 염두에 둬야 한다.
+> 내가 코드 소유권을 가진 클래스에 대한 확장 함수를 정의해서 사용하는 외부 클라이언트 프로젝트가 있다고 하자.
+> 
+> 그 확장 함수와 이름과 시그니처가 같은 멤버 함수를 내 클래스 내부에 추가하면 클라이언트 프로젝트를 재컴파일한 순간부터 그 클라이언트는 확장 함수가 아닌 새로 추가된 멤버 함수를 사용하게 된다.
 
 
 
