update: Kotlin In Action - 3장. 함수 정의와 호출

--- a/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
+++ b/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
@@ -350,7 +350,36 @@ fun Collection<String>.join(
 > 
 > 그 확장 함수와 이름과 시그니처가 같은 멤버 함수를 내 클래스 내부에 추가하면 클라이언트 프로젝트를 재컴파일한 순간부터 그 클라이언트는 확장 함수가 아닌 새로 추가된 멤버 함수를 사용하게 된다.
 
+### 3.3.5 확장 프로퍼티
 
+- 확장 프로퍼티를 사용하면 기존 클래스 객체에 대한 프로퍼티 형식의 구문으로 사용할 수 있는 API 를 추가할 수 있다.
+- 프로퍼티라는 이름으로 불리기는 하지만 상태를 저장할 적절한 방법이 없기 때문에(기존 클래스의 인스턴스 객체에 필드를 추가할 방법은 없다) 실제로 확장 프로퍼티는 아무 상태도 가질 수 없다.
+- 하지만 프로퍼티 문법으로 더 짧게 코드를 작성할 수 있어서 편한 경우가 있다.
+
+#### 예제 1
+
+```kotlin
+val String.lastChar: Char  
+    get() = get(length - 1)
+```
+
+- 뒷받침하는 필드가 없어서 기본 Getter 구현을 제공할 수 없으므로 최소한 Getter 는 꼭 정의를 해야 한다.
+- 마찬가지로 초기화 코드에서 계산한 값을 담을 장소가 전혀 없으므로 초기화 코드도 쓸 수 없다.
+
+#### 예제 2
+
+- String Builder 에 같은 프로퍼티를 정의한다면 StringBuilder 의 맨 마지막 문자는 변경 가능하므로 프로퍼티를 var 로 만들 수 있다.
+- 확장 프로퍼티를 사용하는 방법은 멤버 프로퍼티를 사용하는 방법과 같다.
+
+```kotlin
+var StringBuilder.lastChar: Char  
+    get() = get(length - 1)  
+    set(value) {  
+        this.setCharAt(length - 1, value)  
+    }
+```
+
+- 자바에서 확장 프로퍼티를 사용하고 싶다면 항상 `StringUtilKt.getLastChar("Java")` 처럼 Getter 나 Setter 를 명시적으로 호출해야 한다.
 
 
 
