update: Kotlin In Action - 3장. 함수 정의와 호출

--- a/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
+++ b/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
@@ -381,6 +381,47 @@ var StringBuilder.lastChar: Char
 
 - 자바에서 확장 프로퍼티를 사용하고 싶다면 항상 `StringUtilKt.getLastChar("Java")` 처럼 Getter 나 Setter 를 명시적으로 호출해야 한다.
 
+## 3.4 컬렉션 처리: 가변 길이 인자, 중위 함수 호출, 라이브러리 지원
+
+> [!summary]
+> - `vararg` 키워드를 사용하면 호출 시 인자 개수가 달라질 수 있는 함수를 정의할 수 있다.
+> - 중위(infix) 함수 호출 구문을 사용하면 인자가 하나뿐인 메서드를 간편하게 호출할 수 있다.
+> - 구조 분해 선언(destructuring declaration)을 사용하면 복합적인 값을 분해해서 여러 변수에 나눠 담을 수 있다.
+
+### 3.4.1 자바 컬렉션 API 확장
+
+```kotlin
+fun <T> List<T>.last(): T { /* 마지막 원소를 반환함 */ }
+fun Collection<Int>.max(): Int { /* 컬렉션의 최댓값을 찾음 */ }
+```
+
+- 추가로 표준 라이브러리 참조 매뉴얼을 보면 각 라이브러리 클래스가 제공하는 모든 메서드(멤버 메서드와 확장 함수)를 볼 수 있다.
+
+### 3.4.2 가변 인자 함수: 인자의 개수가 달라질 수 있는 함수 정의
+
+- 자바의 가변 길이 인자는 메서드를 호출할 때 원하는 개수만큼 값을 인자로 넘기면 자바 컴파일러가 배열에 그 값들을 넣어주는 기능이다.
+- 코틀린의 가변 길이 인자도 자바와 비슷하다.
+
+- 다만 코틀린에서는 문법이 조금 다르다.
+- 타입 뒤에 `...` 를 붙이는 대신 코틀린에서는 파라미터 앞에 `vararg` 변경자를 붙인다.
+
+- 자바에서는 배열을 그냥 넘기면 된다.
+- 코틀린에서는 배열을 명시적으로 풀어서 배열의 각 원소가 인자로 전달되게 해야 한다.
+	- 기술적으로는 스프레드(spread) 연산자가 그런 작업을 해준다.
+	- 하지만 실제로는 전달하려는 배열 앞에 * 를 붙이기만 하면 된다.
+	- 그러면 스프레드 연산자가 배열의 내용을 펼쳐준다.
+
+```kotlin
+fun main(args: Array<String>) {
+	val list = listOf("args: ", *args)
+	println(list)
+}
+```
+
+- 위 예제는 코틀린에서 스프레드 연산자를 통하면 배열에 들어있는 값과 다른 여러 값을 함께 써서 함수를 호출할 수 있음을 보여준다.
+
+
+
 
 
 
