update: Kotlin In Action - 3장. 함수 정의와 호출

--- a/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
+++ b/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
@@ -420,6 +420,44 @@ fun main(args: Array<String>) {
 
 - 위 예제는 코틀린에서 스프레드 연산자를 통하면 배열에 들어있는 값과 다른 여러 값을 함께 써서 함수를 호출할 수 있음을 보여준다.
 
+### 3.4.3 값의 쌍 다루기: 중위 호출과 구조 분해 선언
+
+```kotlin
+val map = mapOf(1 to "one", 7 to "seven", 53 to "fify-three")
+```
+
+- 여기서 `to` 라는 코드는 중위 호출(infix call)이라는 특별한 방식으로 `to` 라는 일반 메서드를 호출한 것이다.
+
+- 중위 호출 시에는 수신 객체와 유일한 메서드 인자 사이에 메서드 이름을 넣는다.
+- 다음 두 호출은 동일하다.
+
+```kotlin
+1.to("one") // to 메서드를 일반적인 방식으로 호출함
+1 to "one"  // to 메서드를 중위 호출 방식으로 호출함
+```
+
+- 인자가 하나뿐인 일반 메서드나 인자가 하나뿐인 확장 함수에 중위 호출을 사용할 수 있다.
+- 함수(메서드)를 중위 호출에 사용하게 허용하고 싶으면 `infix` 변경자를 함수(메서드) 선언 앞에 추가해야 한다.
+
+```kotlin
+infix fun Any.to(other: Any) = Pair(this, other)
+```
+
+- `Pair` 의 내용으로 두 변수를 즉시 초기화할 수 있다.
+	- `Pair` 는 코틀린 표준 라이브러리 클래스로, 그 이름대로 두 원소로 이뤄진 순서쌍을 표현한다.
+- 아래와 같은 기능을 구조 분해 선언(destructuring declaration) 이라고 부른다.
+
+```kotlin
+val (number, name) = 1 to "one"
+```
+
+- `to` 함수는 확장 함수다.
+- `to` 를 사용하면 타입과 관계없이 임의의 순서쌍을 만들 수 있다.
+- 이는 `to` 의 수신 객체가 제네릭하다는 뜻이다.
+- `1 to "one"`, `"one" to 1`, `list to list.size()` 등의 호출이 모두 잘 작동한다.
+
+
+
 
 
 
