--- a/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
+++ b/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
@@ -456,6 +456,76 @@ val (number, name) = 1 to "one"
 - 이는 `to` 의 수신 객체가 제네릭하다는 뜻이다.
 - `1 to "one"`, `"one" to 1`, `list to list.size()` 등의 호출이 모두 잘 작동한다.
 
+## 3.5 문자열과 정규식 다루기
+
+- 코틀린 문자열은 자바 문자열과 같다.
+- 문자열은 코틀린과 자바 사이에서 자유롭게 주고받을 수 있다.
+
+### 3.5.1 문자열 나누기
+
+- 자바의 `split` 메서드의 구분 문자열은 실제로는 정규식이기 때문에 혼동이 자주 일어난다.
+- 코틀린에서는 자바의 `split` 대신에 여러 가지 다른 조합의 파라미터를 받는 `split` 확장 함수를 제공함으로써 혼동을 야기하는 메서드를 감춘다.
+- 정규식을 파라미터로 받는 함수는 `String` 이 아닌 `Regex` 타입의 값을 받는다.
+
+### 3.5.2 정규식과 3중 따옴표로 묶은 문자열
+
+![[Kotlin In Action - 그림 3.4.png]]
+
+![[Kotlin In Action - 리스트 3.9.png]]
+
+![[Kotlin In Action - 리스트 3.10.png]]
+
+- 위 예제에서는 3중 따옴표 문자열을 사용해 정규식을 썼다.
+
+> [!note] 3중 따옴표의 특징 1
+> 3중 따옴표 문자열에서는 역슬래시(`\`)를 포함한 어떤 문자도 이스케이프할 필요가 없다.
+	예를 들어 일반 문자열을 사용해 정규식을 작성하는 경우 마침표 기호를 이스케이프하려면 `\\.` 라고 써야 하지만, 3중 따옴표 문자열에서는 `\.` 라고 쓰면 된다.
+
+![[Kotlin In Action - 그림 3.5.png]]
+
+- 이 예제에서 쓴 정규식은 슬래시와 마침표를 기준으로 경로를 세 그룹으로 분리한다.
+	- 패턴 `.` 은 임의의 문자와 매치될 수 있다.
+	- 따라서 첫 번째 그룹인 `(.+)` 는 마지막 슬래시까지 모든 문자와 매치된다.
+	- 이 부분 문자열에는 마지막 슬래시를 제외한 모든 슬래시도 들어간다.
+	- 비슷한 이유로 두 번째 그룹에도 마지막 마침표 전까지 모든 문자가 들어간다.
+	- 세 번째 그룹에는 나머지 모든 문자가 들어간다.
+
+### 3.5.3 여러 줄 3중 따옴표 문자열
+
+- 3중 따옴표 문자열을 문자열 이스케이프를 피하기 위해서만 사용하지는 않는다.
+
+> [!note] 3중 따옴표 특징 2
+> 3중 따옴표 문자열에는 줄 바꿈을 표현하는 아무 문자열이나 (이스케이프 없이) 그대로 들어간다.
+	따라서 3중 따옴표를 쓰면 줄 바꿈이 들어있는 프로그램 텍스트를 쉽게 문자열로 만들 수 있다.
+
+![[Kotlin In Action - 코드 3.1.png|400]]
+
+- 여러 줄 문자열(3중 따옴표 문자열)에는 들여쓰기나 줄 바꿈을 포함한 모든 문자가 들어간다.
+
+- 여러 줄 문자열을 코드에서 더 보기 좋게 표현하고 싶다면 
+- 들여쓰기를 하되 들여쓰기의 끝부분을 특별한 문자열로 표시하고, `trimMargin` 을 사용해 그 문자열과 그 직전의 공백을 제거한다.
+	- 본문의 여러 줄 문자열에서 들여쓰기가 없으면 첫번째 줄이 어긋나서 여러 줄 문자열의 모습을 알아보기가 약간 어렵다.
+	- ![[Kotlin In Action - 코드 3.2.png|250]]
+
+- 여러 줄 문자열에는 줄 바꿈이 들어가지만 줄 바꿈을 `\n` 과 같은 특수 문자를 사용해 넣을 수는 없다.
+
+- 반면에 `\` 를 문자열에 넣고 싶으면 이스케이프할 필요가 없다.
+- 따라서 일반 문자열로 `"C:\\Users\\yole\\kotlin-book"` 이라고 쓴 윈도우 파일 경로를 3중 따옴표 문자열로 쓰면 `"""C:\Users\yole\kotlin-book"""` 이다.
+
+- 3중 따옴표 문자열 안에 문자열 템플릿을 사용할 수도 있다.
+- 그러나 3중 따옴표 문자열 안에서는 이스케이프를 할 수 없기 때문에 문자열 템플릿의 시작을 표현하는 $ 를 3중 따옴표 문자열 안에 넣을 수 없다는 문제가 생긴다.
+- 3중 따옴표 문자열 안에 $ 를 넣어야 한다면 `val price = """${'$'}99.9"""` 처럼 문자열 템플릿 안에 `'$'` 문자를 넣어야 한다.
+	- `println(price)` 의 결과는 `$99.9`
+
+- 프로그래밍 시 여러 줄 문자열이 유용한 분야로 테스트를 꼽을 수 있다.
+- 테스트에서는 여러 줄의 텍스트 출력을 만들어내는 연산을 실행하고 그 결과를 예상 결과와 비교해야 하는 경우가 자주 있다.
+- 여러 줄 문자열은 테스트의 예상 출력을 작성할 때 가장 완벽한 해법이다.
+- 복잡하게 이스케이프를 쓰거나 외부 파일에서 텍스트를 불러올 필요가 없다.
+- 단지 3중 따옴표 사이에 HTML 이나 텍스트를 넣으면 된다.
+- 그리고 소스코드에서 더 보기 좋게 하려면 앞에서 본 `trimMargin` 확장 함수를 사용하면 된다.
+
+
+
 
 
 
