--- a/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
+++ b/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
@@ -481,7 +481,7 @@ val (number, name) = 1 to "one"
 > 3중 따옴표 문자열에서는 역슬래시(`\`)를 포함한 어떤 문자도 이스케이프할 필요가 없다.
 	예를 들어 일반 문자열을 사용해 정규식을 작성하는 경우 마침표 기호를 이스케이프하려면 `\\.` 라고 써야 하지만, 3중 따옴표 문자열에서는 `\.` 라고 쓰면 된다.
 
-![[Kotlin In Action - 그림 3.5.png]]
+![[Kotlin In Action - 그림 3.5.png|500]]
 
 - 이 예제에서 쓴 정규식은 슬래시와 마침표를 기준으로 경로를 세 그룹으로 분리한다.
 	- 패턴 `.` 은 임의의 문자와 매치될 수 있다.
@@ -519,19 +519,89 @@ val (number, name) = 1 to "one"
 
 - 프로그래밍 시 여러 줄 문자열이 유용한 분야로 테스트를 꼽을 수 있다.
 - 테스트에서는 여러 줄의 텍스트 출력을 만들어내는 연산을 실행하고 그 결과를 예상 결과와 비교해야 하는 경우가 자주 있다.
-- 여러 줄 문자열은 테스트의 예상 출력을 작성할 때 가장 완벽한 해법이다.
+- 여러 줄 문자열은 테스트의 예상 출력을 작성할 때 매우 유용하다.
 - 복잡하게 이스케이프를 쓰거나 외부 파일에서 텍스트를 불러올 필요가 없다.
 - 단지 3중 따옴표 사이에 HTML 이나 텍스트를 넣으면 된다.
 - 그리고 소스코드에서 더 보기 좋게 하려면 앞에서 본 `trimMargin` 확장 함수를 사용하면 된다.
 
+## 3.6 코드 다듬기: 로컬 함수와 확장
 
+- 코틀린에서는 함수에서 추출한 함수를 원 함수 내부에 중첩시킬 수 있다.
+- 이를 이용해서 코드 중복을 줄여보자.
 
+- 아래 코드에서는 필드 검증이 중복된다.
 
+```kotlin
+class User(val id: Int, val name: String, val address: String)  
+  
+fun saveUser(user: User) {  
+    if (user.name.isEmpty()) {  
+        throw IllegalArgumentException("Can't save user ${user.id}: empty Name")  
+    }  
+    if (user.address.isEmpty()) {  
+        throw IllegalArgumentException("Can't save user ${user.id}: empty Address")  
+    }  
+}
+```
 
+- 로컬 함수를 추가하여 검증 로직 중복을 없앴다.
 
+```kotlin
+fun saveUser(user: User) {  
+    fun validate(user: User, value: String, fieldName: String) {  
+        if (value.isEmpty()) {  
+            throw IllegalArgumentException("Can't save user ${user.id}: empty $fieldName")  
+        }  
+    }  
+  
+    validate(user, user.name, "Name")  
+    validate(user, user.address, "Address")  
+}
+```
 
+- 하지만 User 객체를 로컬 함수에게 하나하나 전달해야 한다는 점은 아쉽다.
+- 로컬 함수는 자신이 속한 바깥 함수의 모든 파라미터와 변수를 사용할 수 있다.
+- 이런 성질을 이용해서 불필요한 User 파라미터를 없애보자.
 
+```kotlin
+fun saveUser(user: User) {  
+    fun validate(value: String, fieldName: String) {  
+        if (value.isEmpty()) {  
+            throw IllegalArgumentException("Can't save user ${user.id}: empty $fieldName")  
+        }  
+    }  
+  
+    validate(user.name, "Name")  
+    validate(user.address, "Address")  
+}
+```
 
+- 검증 로직을 User 클래스를 확장한 함수로 만들어서 예제를 개선해보자.
 
+```kotlin
+fun User.validateBeforeSave() {  
+    fun validate(value: String, fieldName: String) {  
+        if (value.isEmpty()) {  
+            throw IllegalArgumentException("Can't save user $id: empty $fieldName")  
+        }  
+    }  
+  
+    validate(name, "Name")  
+    validate(address, "Address")  
+}  
+  
+fun saveUser(user: User) {  
+    user.validateBeforeSave()  
+}
+```
 
+- 코드를 확장 함수로 뽑아내는 기법은 매우 유용하다.
+- User 는 내가 만든 코드이지만 위 검증 로직은 User 를 저장하는 곳 이외에서는 쓰지 않기를 원한다.
+- 그래서 User 에 해당 로직을 포함시키지 않은 것이다.
+- User 를 간결하게 유지하면 생각해야 할 내용이 줄어들어서 더 쉽게 코드를 파악할 수 있다.
+
+- 확장 함수를 로컬 함수로 정의할 수도 있다.
+- 즉, `User.validateBeforeSave` 를 `saveUser` 내부에 로컬 함수로 넣을 수 있다.
+- 하지만 중첩된 함수의 깊이가 깊어지면 코드를 읽기가 상당히 어려워진다.
+- 따라서 일반적으로는 한 단계만 함수를 중첩시키라고 권장한다.
 
