--- a/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
+++ b/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
@@ -4,3 +4,96 @@ tags:
   - 책_Kotlin_In_Action
   - Kotlin
 ---
+**4장에서 다루는 내용**
+
+- 클래스와 인터페이스
+- 뻔하지 않은 생성자와 프로퍼티
+- 데이터 클래스
+- 클래스 위임
+- object 키워드 사용
+
+# 4.1 클래스 계층 정의
+
+### 4.1.1 코틀린 인터페이스
+
+- 코틀린 인터페이스 안에는 추상 메서드뿐 아니라 구현이 있는 메서드도 정의할 수 씨다.
+- 다만 인터페이스에는 아무런 상태(필드)도 들어갈 수 없다.
+
+- 코틀린에서 클래스는 `class` 로 정의하고, 인터페이스는 `interface` 를 사용한다.
+
+```kotlin
+interface Clickable {  
+    fun click()  
+}  
+  
+class Button : Clickable {  
+    override fun click() = println("I was clicked")  
+}
+```
+
+- 인터페이스를 구현하는 모든 비추상 클래스(또는 구체적 클래스)는 `click` 에 대한 구현을 제공해야 한다.
+
+- 코틀린에서는 클래스 이름 뒤에 콜론(`:`)을 붙이고 인터페이스와 클래스 이름을 적는 것으로 클래스 확장과 인터페이스 구현을 모두 처리한다.
+
+- 클래스는 하나만 확장 가능, 인터페이스는 제한 없이 구현 가능
+
+- `override` 변경자는 상위 클래스나 상위 인터페이스에 있는 프로퍼티나 메서드를 오버라이드 한다는 표시다.
+- 코틀린에서는 `override` 변경자가 필수
+- `override` 변경자는 실수로 상위 클래스의 메서드를 오버라이드하는 경우를 방지해준다.
+	- 만약 `override` 변경자 없이 상위 클래스와 하위 클래스의 메서드 시그니처가 같으면 컴파일이 안된다.
+
+- 인터페이스 메서드에서 디폴트 구현을 제공할 수 있다.
+- 특별한 키워드 없이 메서드 본문을 메서드 시그니처 뒤에 추가하면 된다.
+
+```kotlin
+interface Clickable {  
+    fun click()  
+    fun showOff() = println("I'm clickable!")  
+}
+```
+
+- 인터페이스 구현체는 새로운 동작을 정의할 수도 있고, 디폴트 구현을 사용할 수도 있다.
+
+```kotlin
+interface Clickable {  
+    fun click()  
+    fun showOff() = println("I'm clickable!") // 시그니처가 같다.
+}  
+  
+interface Focusable {  
+    fun setFocus(b: Boolean) = println("I ${if (b) "got" else "lost"} focus.")  
+    fun showOff() = println("I'm focusable!") // 시그니처가 같다.
+}
+```
+
+- 위 인터페이스를 동시에 구현하는 클래스에서는 어떤 `showOff` 메서드가 실행될까?
+- 어느 쪽도 선택되지 않는다.
+- 클래스가 구현하는 두 상위 인터페이스에 정의된 `showOff` 구현을 대체할 오버라이딩 메서드를 직접 제공하지 않으면 컴파일러 오류가 발생한다.
+- 코틀린 컴파일러는 두 메서드를 아우르는 구현을 하위 클래스에 직접 구현하게 강제한다.
+
+![[Kotlin In Action - 리스트 4.5.png]]
+
+- 위 코드에서 `Button` 은 상속한 두 상위 타입의 `showOff()` 메서드를 호출하는 방식으로 `showOff()` 를 구현한다.
+- 상위 타입의 구현을 호출할 때는 `super` 를 사용한다.
+- 구체적으로 타입을 지정할 때는 꺽쇠 괄호 안에 기반 타입 이름을 지정한다.
+	- Java : `Clickable.super.showOff()`
+	- Kotlin : `super<Clickable>.showOff()`
+
+- 상속한 구현 중 단 하나만 호출해도 된다면 블록 없이 쓸 수도 있다.
+	- ex) `override fun showOff() = super<Clickable>.showOff()`
+
+> [!note] 자바에서 코틀린의 메서드가 있는 인터페이스 구현하기
+> 코틀린은 자바 6와 호환되게 설계됐다. 따라서 인터페이스의 디폴트 메서드를 지원하지 않는다.
+> 
+> 따라서 코틀린은 디폴트 메서드가 있는 인터페이스를 일반 인터페이스와 디폴트 메서드 구현이 정적 메서드로 들어있는 클래스를 조합해 구현한다.
+> 인터페이스에는 메서드 선언만 들어가며, 인터페이스와 함께 생성되는 클래스에는 모든 디폴트 메서드 구현이 정적 메서드로 들어간다.
+> 
+> 그러므로 디폴트 인터페이스가 포함된 코틀린 인터페이스를 자바 클래스에서 상속해 구현하고 싶다면 코틀린에서 메서드 본문을 제공하는 메서드를 포함하는 모든 메서드에 대한 본문을 작성해야 한다.
+> 
+> 하지만 코틀린 1.5 부터는 코틀린 컴파일러가 자바 인터페이스의 디폴트 메서드를 생성해준다.
+
+
+
+
+
+
