--- a/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
+++ b/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
@@ -92,6 +92,61 @@ interface Focusable {
 > 
 > 하지만 코틀린 1.5 부터는 코틀린 컴파일러가 자바 인터페이스의 디폴트 메서드를 생성해준다.
 
+### 4.1.2 open, final, abstract 변경자: 기본적으로 final
+
+- 클래스 상속은 편리하지만 문제가 생기는 경우도 많다.
+
+> [!note] 취약한 기반 클래스(fragile base class) 문제
+> 하위 클래스가 기반 클래스에 대해 가졌던 가정이 기반 클래스를 변경함으로써 깨져버린 경우 발생한다.
+	어떤 클래스가 자신을 상속하는 방법에 대해 정확한 규칙(어떤 메서드를 어떻게 오버라이드해야 하는지 등)을 제공하지 않는다면 그 클래스의 클라이언트는 기반 클래스를 작성한 사람의 의도와 다른 방식으로 메서드를 오버라이드할 위험이 있다.
+
+- 위 문제를 해결 하기 위해서는 "상속을 위한 설계와 문서를 갖추거나, 그럴 수 없다면 상속을 금지" 하는 것이 좋다.
+- 코틀린은 위 철학을 따른다.
+- 코틀린의 클래스와 메서드는 기본적으로 `final`  이다.
+
+- 어떤 클래스의 상속을 허용하려면 클래스 앞에 `open` 변경자를 붙여야 한다.
+- 그와 더불어 오버라이드를 허용하고 싶은 메서드나 프로퍼티 앞에도 `open` 변경자를 붙여야 한다.
+
+![[Kotlin In Action - 리스트 4.6.png]]
+
+- 기반 클래스나 인터페이스의 멤버를 오버라이드하는 경우 그 메서드는 기본적으로 열려있다.
+- 오버라이드하는 메서드의 구현을 하위 클래스에서 오버라이드 못하게 금지하려면 오버라이드하는 메서드 앞에 final 을 명시해야 한다.
+
+![[Kotlin In Action - 리스트 4.7.png]]
+
+> [!note] 열린 클래스와 스마트 캐스트
+> 클래스의 기본적인 상속 가능 상태를 `final` 로 함으로써 얻을 수 있는 장점은 다양한 경우에 스마트 캐스트가 가능하다는 점이다.
+> 
+> 스마트 캐스트는 타입 검사 뒤에 변경될 수 없는 변수에만 적용 가능하다.
+> 클래스 프로퍼티의 경우 이는 `val` 이면서 커스텀 접근자가 없는 경우에만 스마트 캐스트를 쓸 수 있다는 의미다.
+> 이 요구 사항은 또한 프로퍼티가 `final` 이어야만 한다는 뜻이기도 하다.
+
+- 코틀린에서도 클래스를 `abstract` 로 선언할 수 있다.
+- `abstract` 로 선언한 추상 클래스는 인스턴스화할 수 없다.
+- 추상 멤버는 항상 열려있다.
+	- 따라서 추상 멤버 앞에 `open` 변경자를 명시할 필요가 없다.
+
+![[Kotlin In Action - 리스트 4.8.1.png]]
+![[Kotlin In Action - 리스트 4.8.2.png]]
+
+- 아래 표에 있는 설명을 클래스 멤버에 대해 적용할 수 있다.
+
+![[Kotlin In Action - 표 4.1.png]]
+
+- 인터페이스 멤버의 경우 `final`, `open`, `abstract`  를 사용하지 않는다.
+- 인터페이스 멤버는 항상 열려 있으며 `final` 로 변경할 수 없다.
+- 인터페이스 멤버에게 본문이 없으면 자동으로 추상 멤버가 된다.
+	- 그렇더라도 따로 멤버 선언 앞에 `abstract` 키워드를 덧붙일 필요가 없다.
+
+
+
+
+
+
+
+
+
+
 
 
 
