--- a/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
+++ b/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
@@ -138,6 +138,84 @@ interface Focusable {
 - 인터페이스 멤버에게 본문이 없으면 자동으로 추상 멤버가 된다.
 	- 그렇더라도 따로 멤버 선언 앞에 `abstract` 키워드를 덧붙일 필요가 없다.
 
+### 4.1.3 가시성 변경자: 기본적으로 공개
+
+> [!note] 가시성 변경자(visibility modifier)란
+> 코드 기반에 있는 선언에 대한 클래스 외부 접근을 제어한다.
+
+- 코틀린의 기본 가시성은 공개(`public`)이다.
+
+- 자바의 기본 가시성인 패키지 전용(`package-private`)은 코틀린에 없다.
+- 코틀린은 패키지를 네임스페이스(namespace)를 관리하기 위한 용도로만 사용한다.
+- 그래서 패키지를 가시성 제어에 사용하지 않는다.
+
+- 패키지 전용 가시성에 대한 대안으로 코틀린에는 `internal`(모듈 내부) 이라는 새로운 가시성 변경자를 도입했다.
+- `internal` 은 "모듈 내부에서만 볼 수 있음" 이라는 뜻이다.
+- 모듈(module)은 한 번에 한꺼번에 컴파일되는 코틀린 파일들을 의미한다.
+	- IntelliJ, Eclipse, Maven, Gradle 등의 프로젝트가 모듈이 될 수 있다.
+	- 앤트 테스크가 한 번 실행될 때 함께 컴파일되는 파일의 집합도 모듈이 될 수 있다.
+
+- 모듈 내부 가시성은 모듈의 구현에 대해 진정한 캡슐화를 제공한다.
+- 자바에서는 패키지가 같은 클래스를 선언하기만 하면 어떤 프로젝트의 외부에 있는 코드라도 패키지 내부에 있는 패키지 전용 선언에 쉽게 접근할 수 있다.
+	- 그래서 모듈의 캡슐화가 쉽게 깨진다.
+
+- 코틀린에서는 최상위 선언에 대해 `private` 가시성(비공개 가시성)을 허용한다.
+- 그런 최상위 선언에는 클래스, 함수, 프로퍼티 등이 포함된다.
+- 비공개 가시성인 최상위 선언은 그 선언이 들어있는 파일 내부에서만 사용할 수 있다.
+
+![[Kotlin In Action - 표 4.2.png]]
+
+![[Kotlin In Action - 코드 4.1.png]]
+
+위 예제를 보자.
+- `TalkativeButton` 은 internal 의 가시성을 가지고 있는데 반해, `giveSpeech` 는 public 이라는 더 높은 가시성을 가지고 있다.
+- 이런 경우 `giveSpeech` 는 `TalkativeButton` 을 참조하지 못한다.
+- 즉, 가시성이 높은 함수에서 가시성이 낮은 타입을 참조할 수 없어 컴파일 오류가 날 것이다.
+- 이를 피하려면 `giveSpeech` 확장 함수의 가시성을 `internal` 로 바꾸거나, `TalkativeButton` 클래스의 가시성을 `public` 으로 바꿔야 한다.
+
+> [!important] 
+> 어떤 클래스의 기반 타입 목록에 들어있는 타입이나 제네릭 클래스의 타입 파라미터에 들어있는 타입의 가시성은 그 클래스 자신의 가시성과 같거나 더 높아야 하고,
+> 
+> 메서드의 시그니처에 사용된 모든 타입의 가시성은 그 메서드의 가시성과 같거나 더 높아야 한다.
+	이런 규칙은 어떤 함수를 호출하거나 어떤 클래스를 확장할 때 필요한 모든 타입에 접근할 수 있게 보장해준다.
+
+- 자바에서는 같은 패키지 안에서 `protected` 멤버에 접근할 수 있다.
+- 하지만 코틀린에서 `protected` 멤버는 오직 어떤 클래스나 그 클래스를 상속한 클래스 안에서만 보인다.
+
+- 클래스를 확장한 함수는 그 클래스의 `private` 이나 `protected` 멤버에 접근할 수 없다.
+
+> [!note] 코틀린의 가시성 변경자와 자바
+> 코틀린의 `public`, `protected`, `private`  변경자는 컴파일된 자바 바이트코드 안에서도 그대로 유지된다.
+> 그렇게 컴파일된 코틀린 선언의 가시성은 마치 자바에서 똑같은 가시성을 사용해 선언한 경우와 같다.
+> 
+> 유일한 예외는 `private`  클래스다.
+> 자바에서는 클래스를 `private` 으로 만들 수 없으므로 내부적으로 코틀린은 `private` 클래스를 `default`(패키지-전용) 클래스로 컴파일한다.
+> ---
+> 자바에는 `internal` 에 딱 맞는 가시성이 없다.
+> 
+> `default`(패키지-전용) 가시성은 `internal` 과는 전혀 다르다.
+> 모듈은 보통 여러 패키지로 이뤄지며 서로 다른 모듈에 같은 패키지에 속한 선언이 들어 있을 수도 있다.
+> 따라서 `internal` 변경자는 바이트코드상에서는 `public` 이 된다.
+> ---
+> 코틀린 선언과 그에 해당하는 자바 선언(또는 바이트코드 표현)에 이런 차이가 있기 때문에 
+> 코틀린에서는 접근할 수 없는 대상을 자바에서 접근할 수 있는 경우가 생긴다.
+> 
+> 예를 들어 다른 모듈에 정의된 `internal` 클래스나 `internal` 최상위 선언을 모듈 외부의 자바 코드에서 접근할 수 있다.
+> 또한 코틀린에서 `protected` 로 정의한 멤버를 코틀린 클래스와 같은 패키지에 속한 자바 코드에서는 접근할 수 **있다**(이는 자바에서 자바 `protected` 멤버에 접근하는 경우와 같다).
+> ---
+> 하지만 코틀린 컴파일러가 `internal` 멤버의 이름을 보기 나쁘게 바꾼다는(mangle) 사실을 기억하자.
+> 그로 인해 기술적으로는 `internal` 멤버를 자바에서 문제없이 사용할 수 있지만, 멤버 이름이 보기 불편하고 코드가 못생겨 보인다.
+> 
+> 이렇게 이름을 바꾸는 이유는 두 가지다.
+> 1. 한 모듈에 속한 어떤 클래스를 모듈 밖에서 상속한 경우 그 하위 클래스 내부의 메서드 이름이 우연히 상위 클래스의 `internal` 메서드와 같아져서 내부 메서드를 오버라이드하는 경우를 방지하기 위함이다.
+> 2. 실수로 `internal` 클래스를 모듈 외부에서 사용하는 일을 막기 위함이다.
+
+- 코틀린과 자바 가시성 규칙의 또 다른 차이는
+- 코틀린에서는 외부 클래스가 내부 클래스나 중첩된 클래스의 `private` 멤버에 접근할 수 없다는 점이다.
+
+
+
+
 
 
 
