update: Kotlin In Action - 4장. 클래스, 객체, 인터페이스

--- a/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
+++ b/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
@@ -213,6 +213,8 @@ interface Focusable {
 - 코틀린과 자바 가시성 규칙의 또 다른 차이는
 - 코틀린에서는 외부 클래스가 내부 클래스나 중첩된 클래스의 `private` 멤버에 접근할 수 없다는 점이다.
 
+### 4.1.4 내부 클래스와 중첩된 클래스: 기본적으로 중첩 클래스
+
 
 
 
