update: Kotlin In Action - 4장. 클래스, 객체, 인터페이스

--- a/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
+++ b/01. Development/01. Book/Kotlin In Action/02장. 코틀린 기초.md
@@ -38,7 +38,7 @@ fun main(args: Array<String>) {
 - 함수 이름 뒤에는 괄호 안에 파라미터 목록이 온다.
 - 함수의 반환 타입은 파라미터 목록의 닫는 괄호 다음에 오는데, 괄호와 반환 타입 사이를 콜론으로 구분해야 한다.
 
-![[Kotlin In Action - 그림 2.1 코틀린 함수 정의.png|400]]
+![[Kotlin In Action - 그림 2.1.png|400]]
 
 > [!tip] 문(statement)과 식(expression)의 구분
 > 코틀린에서 If 는 식이지 문이 아니다.
@@ -201,7 +201,7 @@ class Person(val name: String)
 - val 로 선언한 프로퍼티는 읽기 전용
 - var 로 선언한 프로퍼티는 변경 가능
 
-![[Kotlin In Action - 리스트 2.5 클래스 안에서 변경 가능한 프로퍼티 선언하기.png]]
+![[Kotlin In Action - 리스트 2.5.png]]
 
 - 기본적으로 코틀린에서 프로퍼티를 선언하는 방식은 프로퍼티와 관련 있는 접근자를 선언하는 것이다.
 	- 읽기 전용 프로퍼티는 Getter 만 선언한다.
@@ -214,7 +214,7 @@ class Person(val name: String)
 
 - 이는 어떤 언어를 정의했느냐와 관계없이 자바 클래스와 코틀린 클래스를 동일한 방식으로 사용할 수 있다는 뜻이다.
 
-![[Kotlin In Action - 리스트 2.6 자바에서 Person 클래스를 사용하는 방법.png]]
+![[Kotlin In Action - 리스트 2.6.png]]
 
 - 자바와 코틀린에서 정의한 Person 클래스 중 어느 쪽을 사용해도 위 코드를 바꿀 필요가 없다.
 
@@ -223,7 +223,7 @@ class Person(val name: String)
 - Setter 에는 is 를 set 으로 바꾼 이름을 사용한다.
 - 따라서 자바에서 isMarried 프로퍼티의 Getter 를 호출하려면 `isMarried()` 를 사용해야 한다.
 
-![[Kotlin In Action - 리스트 2.7 코틀린에서 Person 클래스 사용하기.png]]
+![[Kotlin In Action - 리스트 2.7.png]]
 
 - Getter 를 호출하는 대신 프로퍼티를 직접 사용했다.
 
@@ -267,12 +267,12 @@ class Rectangle(val height: Int, val width: Int) {
 - 같은 패키지에 속해 있다면 다른 파일에서 정의한 선언일지라도 직접 사용할 수 있다.
 - 반면 다른 패키지에 정의한 선언을 사용하려면 임포트를 통해 선언을 불러워야 한다.
 
-![[Kotlin In Action - 리스트 2.8 클래스와 함수 선언을 패키지에 넣기.png]]
+![[Kotlin In Action - 리스트 2.8.png]]
 
 - 코틀린에서는 클래스 임포트와 함수 임포트에 차이가 없으며, 모든 선언을 inport 키워드로 가져올 수 있다.
 - 최상위 함수는 그 이름을 써서 임포트할 수 있다.
 
-![[Kotlin In Action - 리스트 2.9 다른 패키지에 있는 함수 임포트하기.png]]
+![[Kotlin In Action - 리스트 2.9.png]]
 
 - 패키지 이름 뒤에 `.*` 를 추가하면 패키지 안의 모든 선언을 임포트할 수 있다.
 - 이런 스타 임포트를 사용하면 패키지 안에 있는 모든 클래스뿐 아니라 최상위에 정의된 함수나 프로퍼티까지 모두 불러온다.
@@ -281,14 +281,14 @@ class Rectangle(val height: Int, val width: Int) {
 
 - 자바에서는 패키지의 구조와 일치하는 디렉터리 계층 구조를 만들고 클래스의 소스코드를 그 클래스가 속한 패키지와 같은 디렉터리에 위치시켜야 한다.
 
-![[Kotlin In Action - 그림 2.2 자바에서는 디렉터리 구조가 패키지 구조를 그대로 따라야 한다.png]]
+![[Kotlin In Action - 그림 2.2.png]]
 
 #### 코틀린의 디렉터리와 패키지
 
 >[!note]
 > 코틀린에서는 여러 클래스를 한 파일에 넣을 수 있고, 파일의 이름도 마음대로 정할 수 있다.
 
-![[Kotlin In Action - 그림 2.3 패키지 구조와 디렉터리 구조가 맞아 떨어질 필요는 없다.png]]
+![[Kotlin In Action - 그림 2.3.png]]
 
 > [!warning] 코틀린에서 디렉터리와 패키지 설정 시 주의점
 > 대부분의 경우 자바와 같이 패키지별로 디렉터리를 구성하는 편이 낫다.
@@ -302,7 +302,7 @@ class Rectangle(val height: Int, val width: Int) {
 
 ### 2.3.1 enum 클래스 정의
 
-![[Kotlin In Action - 리스트 2.10 간단한 enum 클래스 정의하기.png]]
+![[Kotlin In Action - 리스트 2.10.png]]
 
 - 코틀린에서 enum 은 소프트 키워드(soft keyword)라 부르는 존재다.
 - enum 은 class 앞에 있을 때는 특별한 의미를 지니지만 다른 곳에서는 이름에 사용할 수 있다.
@@ -313,7 +313,7 @@ class Rectangle(val height: Int, val width: Int) {
 - enum 클래스 안에도 프로퍼티나 메서드를 정의할 수 있다.
 - enum 클래스 안에 메서드를 정의하는 경우 반드시 enum 상수 목록과 메서드 정의 사이에 세미콜론을 넣어야 한다.
 
-![[Kotlin In Action - 리스트 2.11 프로퍼티와 메서드가 있는 enum 클래스 선언하기.png]]
+![[Kotlin In Action - 리스트 2.11.png]]
 
 ### 2.3.2 when 으로 enum 클래스 다루기
 
@@ -321,25 +321,25 @@ class Rectangle(val height: Int, val width: Int) {
 - if 와 마찬가지로 when 도 값을 만들어내는 식이다.
 	- 따라서 식이 본문인 함수에 when 을 바로 사용할 수 있다.
 
-![[Kotlin In Action - 리스트 2.12 when 을 사용해 올바른 enum 값 찾기.png]]
+![[Kotlin In Action - 리스트 2.12.png]]
 
 - 앞의 코드는 color 로 전달된 값과 같은 분기를 찾아 그 분기를 실행한다.
 - 자바와 달리 각 분기의 끝에 break 를 넣지 않아도 된다.
 
 - 한 분기 안에서 여러 값을 매치 패턴으로 사용할 수도 있는데, 그럴 경우 값 사이를 콤마(,)로 분리한다.
 
-![[Kotlin In Action - 리스트 2.13 한 when 분기 안에 여러 값 사용하기.png]]
+![[Kotlin In Action - 리스트 2.13.png]]
 
 - 앞의 예제들에서는 Color 라는 enum 클래스 이름을 enum 상수 이름 앞에 붙인 전체 이름을 사용했다.
 - 상수 값을 임포트하면 이 코드를 더 간단하기 만들 수 있다.
 
-![[Kotlin In Action - 리스트 2.14 enum 상수 값을 임포트해서 enum 클래스 수식자 없이 enum 사용하기.png]]
+![[Kotlin In Action - 리스트 2.14.png]]
 
 ### 2.3.3 when 과 임의의 객체를 함께 사용
 
 - 코틀린 when 의 분기 조건은 임의의 객체를 허용한다.
 
-![[Kotlin In Action - 리스트 2.15 when의 분기 조건에 여러 다른 객체 사용하기.png]]
+![[Kotlin In Action - 리스트 2.15.png]]
 
 - when 식은 인자 값과 매치하는 조건 값을 찾을 떄까지 각 분기를 검사한다.
 - `setOf(c1, c2)` 와 분기 조건에 있는 객체 사이를 매치할 때 동등성(equality)을 사용한다.
@@ -354,7 +354,7 @@ class Rectangle(val height: Int, val width: Int) {
 - 이런 함수가 자주 호출된다면 불필요한 가비지 객체가 늘어나는 것을 방지하기 위해 함수를 고쳐 쓰는 편이 낫다.
 - 인자가 없는 when 식을 사용하면 불필요한 객체 생성을 막을 수 있다.
 
-![[Kotlin In Action - 리스트 2.16 인자가 없는 when.png]]
+![[Kotlin In Action - 리스트 2.16.png]]
 
 - 위 예제 코드는 추가 객체를 만들지 않는다는 장점이 있지만 가독성은 더 떨어진다.
 
@@ -362,12 +362,12 @@ class Rectangle(val height: Int, val width: Int) {
 
 - (1 + 2) + 4 와 같은 간단한 산술식을 계산하는 함수를 만들어보자.
 
-![[Kotlin In Action - 리스트 2.17 식을 표현하는 클래스 계층.png]]
+![[Kotlin In Action - 리스트 2.17.png]]
 
-![[Kotlin In Action - 그림 2.4 Sum(Sum(Num(1), Num(2)), Num(4))이라는 식의 트리 표현.png]]
+![[Kotlin In Action - 그림 2.4.png]]
 
-![[Kotlin In Action - 리스트 2.18 if 연쇄를 사용해 식을 계산하기 - 1.png]]
-![[Kotlin In Action - 리스트 2.18 if 연쇄를 사용해 식을 계산하기 - 2.png]]
+![[Kotlin In Action - 리스트 2.18.1.png]]
+![[Kotlin In Action - 리스트 2.18.2.png]]
 
 - 자바에서는 어떤 변수의 타입을 instanceof 로 확인한 다음에 명시적으로 변수 타입을 캐스팅해야 한다.
 - 하지만 코틀린에서는 어떤 변수가 원하는 타입인지 일단 is 로 검사하고 나면 굳이 변수를 원하는 타입으로 캐스팅 하지 않아도 된다.
@@ -399,7 +399,7 @@ fun eval(e: Expr): Int =
 - if 의 분기에 식이 하나밖에 없다면 중괄호를 생략해도 된다.
 - if 분기에 블록을 사용하는 경우 그 블록의 마지막 식이 그 분기의 결과 값이다.
 
-![[Kotlin In Action - 리스트 2.20 if 중첩 대신 when 사용하기.png]]
+![[Kotlin In Action - 리스트 2.20.png]]
 
 - 타입을 검사하고 나면 스마트 캐스트가 이뤄진다. 따라서 Num이나 Sum의 멤버에 접근할 때 변수를 강제로 캐스팅할 필요가 없다.
 - if 나 when 의 각 분기에서 수행해야 하는 로직이 복잡해지면 분기 본문에 블록을 사용할 수 있다.
