--- a/01. Development/01. Book/Kotlin In Action/01장. 코틀린이란 무엇이며, 왜 필요한가?.md
+++ b/01. Development/01. Book/Kotlin In Action/01장. 코틀린이란 무엇이며, 왜 필요한가?.md
@@ -187,7 +187,7 @@ kotlinc <소스파일 또는 디렉터리> -include-runtime -d <java 이름>
 java -jar <jar 이름>
 ```
 
-![[Kotlin In Action - 그림 1.1 코틀린 빌드 과정.png]]
+![[Kotlin In Action - 그림 1.1.png]]
 
 - 코틀린 컴파일러로 컴파일한 코드는 코틀린 런타임 라이브러리에 의존한다.
 - 런타임 라이브러리에는 코틀린 자체 표준 라이브러리 클래스와 코틀린에서 자바 API 의 기능을 확장한 내용이 들어있다.
