--- a/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
+++ b/01. Development/01. Book/Kotlin In Action/03장. 함수 정의와 호출.md
@@ -213,7 +213,7 @@ fun String.lastChar(): Char = this.get(this.length - 1)
 - 클래스 이름을 **수신 객체 타입**(receiver type) 이라 부르며, 
 - 확장 함수가 호출되는 대상이 되는 값(객체)을 **수신 객체**(receiver object)라고 부른다.
 
-![[Kotlin In Action - 그림 3.1 수신 객체 타입은 확장이 정의될 클래스의 타입이며, 수신 객체는 그 .png]]
+![[Kotlin In Action - 그림 3.1.png]]
 
 - 위 함수를 호출하는 구문은 다른 일반 클래스 멤버를 호출하는 구문과 같다.
 
@@ -340,7 +340,7 @@ fun Collection<String>.join(
 - 따라서 변수의 정적 타입에 의해 어떤 확장 함수가 호출될지 결정되지, 그 변수에 저장된 객체의 동적인 타입에 의해 확장 함수가 결정되지 않는다.
 - 코틀린은 호출될 확장 함수를 정적으로 결정한다.
 
-![[Kotlin In Action - 그림 3.2 확장 함수는 클래스의 밖에 선언된다.png|400]]
+![[Kotlin In Action - 그림 3.2.png|400]]
 
 > [!note]
 > 어떤 클래스를 확장한 함수와 그 클래스의 멤버 함수의 이름과 시그니처가 같다면 확장 함수가 아니라 멤버 함수가 호출된다(멤버 함수의 우선순위가 더 높다).
