update: Kotlin In Action - 4장. 클래스, 객체, 인터페이스

--- a/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
+++ b/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
@@ -215,9 +215,29 @@ interface Focusable {
 
 ### 4.1.4 내부 클래스와 중첩된 클래스: 기본적으로 중첩 클래스
 
+> [!note]
+> 코틀린의 중첩 클래스(nested class)는 명시적으로 요청하지 않는 한 바깥쪽 클래스 인스턴스에 대한 접근권한이 없다.
 
+- 이는 [[Inner class 직렬화하기|중첩 클래스가 묵시적으로 바깥쪽 클래스를 참조하고 있는 자바]]하고는 정반대이다.
 
+- 코틀린 중첩 클래스에 아무런 변경자가 붙지 않으면 자바 `static` 중첩 클래스와 같다.
+- 이를 내부 클래스로 변경해서 바깥쪽 클래스에 대한 참조를 포함하게 만들고 싶다면 `inner` 변경자를 붙여야 한다.
 
+![[Kotlin In Action - 표 4.3.png]]
+
+![[Kotlin In Action - 그림 4.1.png]]
+
+- 코틀린 내부 클래스 `Inner` 안쪽에서 바깥쪽 클래스 `Outer` 의 참조에 접근하려면 `this@Outer` 라고 써야 한다.
+
+```kotlin
+class Outer {
+	inner class Inner {
+		fun getOuterReference(): Outer = this@Outer
+	}
+}
+```
+
+- 클래스 계층을 만들되 그 계층에 속한 클래스의 수를 제한하고 싶은 경우 중첩 클래스를 쓰면 편리하다.
 
 
 
