update: Kotlin In Action - 4장. 클래스, 객체, 인터페이스

--- a/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
+++ b/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
@@ -239,11 +239,49 @@ class Outer {
 
 - 클래스 계층을 만들되 그 계층에 속한 클래스의 수를 제한하고 싶은 경우 중첩 클래스를 쓰면 편리하다.
 
+### 4.1.5 봉인된 클래스: 클래스 계층 정의 시 계층 확장 제한
+
+![[Kotlin In Action - 리스트 4.12.png|500]]
+
+- 코틀린 컴파일러는 `when` 을 사용해 `Expr` 타입의 값을 검사할 때 꼭 디폴트 분기인 `else` 분기를 덧붙이게 강제한다.
+- `else` 분기에서 반환할 만한 의미 있는 값이 없으면 예외를 던진다.
+
+- 항상 디폴트 분기를 추가하는 게 편하지는 않다.
+- 릐고 디폴트 분기가 있으면 새로운 하위 클래스를 추가하더라도 컴파일러가 `when` 이 모든 경우를 처리하는지 제대로 검사할 수 없다.
+- 실수로 새로운 클래스 처리를 잊어버리면 디폴트 분기가 선택되기 때문에 심각한 버그가 발생할 수도 있다.
+
+- 코틀린은 이런 문제를 방지하기 위해 `sealed` 클래스를 만들었다.
+- 상위 클래스에 `sealed` 변경자를 붙이면 그 상위 클래스를 상속한 하위 클래스 정의를 제한할 수 있다.
+- `sealed` 클래스의 하위 클래스를 정의할 때는 반드시 상위 클래스 안에 중첩시켜야 한다.
+
+![[Kotlin In Action - 리스트 4.13.png]]
+
+- `when` 식에서 `sealed` 클래스의 모든 하위 클래스를 처리한다면 디폴트 분기(`else` 분기)가 필요 없다.
+- `sealed` 로 표시된 클래스는 자동으로 `open` 이다.
+	- 따라서 별도로 `open` 변경자를 붙일 필요가 없다.
+
+![[Kotlin In Action - 그림 4.2.png]]
+
+- 봉인된 클래스는 클래스 외부에 자신을 상속한 클래스를 둘 수 없다.
+
+- `sealed` 클래스에 속한 값에 대해 디폴트 분기를 사용하지 않고 `when` 식을 사용하면 나중에 `sealed` 클래스의 상속 계층에 새로운 하위 클래스를 추가해도 `when` 식이 컴파일되지 않는다.
+- 따라서 `when` 식을 고쳐야 한다는 사실을 쉽게 알 수 있다.
 
 
+![[Kotlin In Action - 코드 4.2.png]]
 
+- 내부적으로 `Expr` 클래스는 `private` 생성자를 가진다.
+- 그 생성자는 클래스 내부에서만 호출할 수 있다.
 
+- `sealed` 인터페이스를 정의할 수는 없다.
+	- `sealed` 인터페이스를 만들 수 있다면 그 인터페이스를 자바 쪽에서 구현하지 못하게 막을 수 있는 수단이 코틀린 컴파일러에게 없기 때문이다.
 
+> [!note]
+> 코틀린 1.0 에서 `sealed` 는 너무 제약이 심하다.
+> 
+> 예를 들어 모든 하위 클래스는 중첩 클래스여야 하고, 데이터 클래스로 `sealed` 클래스를 상속할 수도 없다.
+>
+> 코틀린 1.5 부터는 `sealed` 클래스가 정의된 패키지 안의 아무 위치(최상위, 다른 클래스나 객체나 인터페이스에 내포된 위치)에 선언할 수 있게 됐고, `sealed` 인터페이스도 추가됐다.
 
 
 
