--- a/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
+++ b/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
@@ -283,6 +283,145 @@ class Outer {
 >
 > 코틀린 1.5 부터는 `sealed` 클래스가 정의된 패키지 안의 아무 위치(최상위, 다른 클래스나 객체나 인터페이스에 내포된 위치)에 선언할 수 있게 됐고, `sealed` 인터페이스도 추가됐다.
 
+## 4.2 뻔하지 않은 생성자와 프로퍼티를 갖는 클래스 선언
+
+- 코틀린은 주(primary) 생성자와 부(secondary) 생성자를 구분한다.
+	- 보통 주 생성자는 클래스를 초기화할 때 주로 사용하는 간략한 생성자로, 클래스 본문 밖에서 정의한다.
+	- 부 생성자는 클래스 본문 안에서 정의한다.
+
+- 코틀린에서는 초기화 블록(initializer block)을 통해 초기화 로직을 추가할 수 있다.
+
+### 4.2.1 클래스 초기화: 주 생성자와 초기화 블록
+
+```kotlin
+class User(val nickname: String) // 프로퍼티 겸 생성자 파라미터
+```
+
+- 클래스 이름 뒤에 오는 괄호로 둘러싸인 코드를 주 생성자(primary constructor)라고 부른다.
+- 주 생성자는 생성자 파라미터를 지정하고 그 생성자 파라미터에 의해 초기화되는 프로퍼티를 정의하는 두 가지 목적에 쓰인다.
+
+- 아래 코드는 위 코드와 같은 목적을 달성할 수 있는 가장 명시적인 선언이다.
+- 생성자 파라미터와 프로퍼티를 나누어놓았다.
+
+```kotlin
+class User constructor(_nickname: String) { // 생성자 파라미터
+    val nickname: String // 프로퍼티
+      
+    init {  
+        nickname = _nickname
+    }  
+}
+```
+
+- `constructor` 키워드
+	- 주 생성자나 부 생성자 정의를 시작할 때 사용한다.
+
+- `init` 키워드
+	- 초기화 블록을 시작한다.
+
+- 초기화 블록
+	- 초기화 블록에는 클래스의 객체가 만들어질 때(인스턴스화될 때) 실행될 초기화 코드가 들어간다.
+	- 초기화 블록은 주 생성자와 함께 사용된다.
+	- 주 생성자는 제한적이기 때문에 별도의 코드를 포함할 수 없으므로 초기화 블록이 필요하다.
+	- 필요하다면 클래스 안에 여러 초기화 블록을 선언할 수 있다.
+
+- 굳이 위 코드처럼 언더바(`_`)로 프로퍼티와 생성자 파라미터를 구분하지 않고
+- 자바에서 처럼 `this.nickname = nickname` 같이 생성자 파라미터와 프로퍼티의 이름을 같게 하고 프로퍼티에 `this` 를 써서 모호성을 없애도 된다.
+
+```kotlin
+class User constructor(nickname: String) {  
+    val nickname: String // 이게 this.name 에 해당한다.
+  
+    init {  
+        this.nickname = nickname  
+    }  
+}
+```
+
+- 위 코드에서는 `nickname` 프로퍼티를 초기화하는 코드를 `nickname` 프로퍼티 선언에 포함시킬 수 있어서 초기화 코드를 초기화 블록에 넣을 필요가 없다.
+- 그리고 주 생성자 앞에 별다른 애너테이션이나 가시성 변경자가 없다면 `constructor` 를 생략해도 된다.
+- 이런 변경을 적용하면 위 코드를 다음과 같이 바꿀 수 있다.
+
+```kotlin
+class User constructor(_nickname: String) {  
+    val nickname = _nickname  
+}
+```
+
+- 프로퍼티를 초기화하는 식이나 초기화 블록 안에서만 주 생성자의 파라미터를 참조할 수 있다.
+
+- 앞의 두 예제 코드는 클래스 본문에서 `val` 키워드를 통해 프로퍼티를 정의했다.
+- 하지만 주 생성자의 파라미터로 프로퍼티를 초기화한다면, 그 주 생성자 파라미터 이름 앞에 `val` 을 추가하는 방식으로 프로퍼티 정의와 초기화를 간략히 쓸 수 있다.
+
+```kotlin
+class User(val nickname: String) // val 은 이 파라미터에 상응하는 프로퍼티가 생성된다는 뜻이다.
+```
+
+- 함수 파라미터와 마찬가지로 생성자 파라미터에도 디폴트 값을 정의할 수 있다.
+
+```kotlin
+class User(val nickname: String, val isSubscribed: Boolean = true)
+```
+
+- 클래스의 인스턴스를 만들려면 `new` 키워드 없이 생성자를 직접 호출하면 된다.
+
+![[Kotlin In Action - 코드 4.3.png]]
+
+> [!note]
+> 모든 생성자 파라미터에 디폴트 값을 지정하면 컴파일러가 자동으로 파라미터가 없는 생성자를 만들어준다.
+> 그렇게 자동으로 만들어진 파라미터 없는 생성자는 디폴트 값을 사용해 클래스를 초기화한다.
+> 
+> 의존관계 주입(DI, Dependency Injection) 프레임워크 등 자바 라이브러리 중에는 파라미터가 없는 생성자를 통해 객체를 생성해야만 라이브러리 사용이 가능한 경우가 있다.
+> 코틀린이 제공하는 파라미터 없는 생성자는 그런 라이브러리와의 통합을 쉽게 해준다.
+
+
+- 클래스에 기반 클래스가 있다면 주 생성자에서 기반 클래스의 생성자를 호출해야 할 필요가 있다.
+- 기반 클래스를 초기화하려면 기반 클래스 이름 뒤에 괄호를 치고 생성자 인자를 넘긴다.
+
+```kotlin
+open class User(val nickname: String)  
+class TwitterUser(nickname: String) : User(nickname)
+```
+
+- 클래스를 정의할 때 별도로 생성자를 정의하지 않으면 컴파일러가 자동으로 아무 일도 하지 않는 인자가 없는 디폴트 생성자를 만들어준다.
+
+```kotlin
+open class Button // 인자가 없는 디폴트 생성자가 만들어진다.
+```
+
+- `Button` 의 생성자는 아무 인자도 받지 않지만, `Button` 클래스를 상속한 하위 클래스는 반드시 `Button` 클래스의 생성자를 호출해야 한다.
+
+```kotlin
+class RadioButton: Button()
+```
+
+- 이 규칙으로 인해 기반 클래스의 이름 뒤에는 꼭 빈 괄호가 들어간다.
+	- 물론 생성자 인자가 있다면 괄호 안에 인자가 들어간다.
+- 반면 인터페이스는 생성자가 없기 때문에 어떤 클래스가 인터페이스를 구현하는 경우 인터페이스 이름 뒤에는 아무 괄호도 없다.
+- 이런 차이를 보고 클래스 정의에서 기반 클래스와 인터페이스를 구별할 수 있다.
+
+```kotlin
+open class Button  
+interface Clickable  
+class RadioButton: Button(), Clickable
+```
+
+
+- 어떤 클래스를 클래스 외부에서 인스턴스화하지 못하게 막고 싶다면 모든 생성자를 `private` 으로 만들면 된다.
+- 다음은 주 생성자에 `private` 변경자를 붙인 것이다.
+
+```kotlin
+class Secretive private constructor() {}
+```
+
+- `Secretive` 클래스 안에는 주 생성자밖에 없고 그 주 생성자는 비공개이므로 외부에서는 `Secretive` 를 인스턴스화할 수 없다.
+
+- 대부분의 경우 클래스의 생성자는 아주 단순하다.
+- 그래서 코틀린은 간단한 주 생성자 문법을 제공한다.
+- 하지만 간단하지 않은 경우를 대비해 다양한 생성자를 정의할 수 있게 해준다.
+
+
+
 
 
 
