--- a/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
+++ b/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
@@ -420,6 +420,82 @@ class Secretive private constructor() {}
 - 그래서 코틀린은 간단한 주 생성자 문법을 제공한다.
 - 하지만 간단하지 않은 경우를 대비해 다양한 생성자를 정의할 수 있게 해준다.
 
+### 4.2.2 부 생성자: 상위 클래스를 다른 방식으로 초기화
+
+- 일반적으로 코틀린에서는 생성자가 여럿 있는 경우가 자바보다 훨씬 적다.
+- 자바에서 오버로드한 생성자가 필요한 상황 중 상당수는 코틀린의 디폴트 파라미터 값과 이름 붙인 인자 문법을 사용해 해결할 수 있다.
+
+> [!tip]
+> 인자에 대한 디폴트 값을 제공하기 위해 부 생성자를 여럿 만들지 말라.
+> 대신 파라미터의 디폴트 값을 생성자 시그니처에 직접 명시하라
+
+- 그래도 생성자가 여럿 필요한 경우가 가끔 있다.
+
+- 부 생성자는 `constructor` 키워드로 시작한다.
+- 필요에 따라 얼마든지 부 생성자를 많이 선언해도 된다.
+
+- 클래스를 확장하면서 똑같이 부 생성자를 정의할 수 있다.
+- 여기서 두 부 생성자는 `super()` 키워드를 통해 자신에 대응하는 상위 클래스 생성자를 호출한다.
+
+```kotlin
+open class View {  
+    constructor(ctx: Context) {  
+        // 코드  
+    }  
+  
+    constructor(ctx: Context, attr: AttributeSet) {  
+        // 코드  
+    }  
+}  
+  
+class MyButton : View {  
+    constructor(ctx: Context)   
+            : super(ctx) {  
+        // ..  
+    }  
+      
+    constructor(ctx: Context, attr: AttributeSet)   
+            : super(ctx, attr) {  
+        // ..  
+    }  
+}
+```
+
+![[Kotlin In Action - 그림 4.3.png]]
+
+
+- 자바와 마찬가지로 생성자에서 `this()` 를 통해 클래스 자신의 다른 생성자를 호출할 수 있다.
+- 아래 코드에서는 `MyButton` 클래스의 생성자 중 하나가 파라미터의 디폴트 값을 넘겨서 같은 클래스의 다른 생성자(`this` 를 사용해 참조함)에게 생성을 위임한다.
+
+```kotlin
+class MyButton : View {  
+    constructor(ctx: Context)   
+            : this(ctx, MY_STYLE) {  
+        // ..  
+    }  
+  
+    constructor(ctx: Context, attr: AttributeSet)  
+            : super(ctx, attr) {  
+        // ..  
+    }  
+}
+```
+
+![[Kotlin In Action - 그림 4.4.png]]
+
+
+- 클래스에 주 생성자가 없다면 모든 부 생성자는 반드시 상위 클래스를 초기화하거나 다른 생성자에게 생성을 위임해야 한다.
+- 각 부 생성자에서 객체 생성을 위임하는 화살표를 따라가면 그 끝에는 상위 클래스 생성자를 호출하는 화살표가 있어야 한다는 뜻이다.
+
+- 부 생성자가 필요한 주된 이유는 자바 상호운용성이다.
+- 그리고 클래스 인스턴스를 생성할 때 파라미터 목록이 다른 생성 방법이 여럿 존재하는 경우에는 부 생성자를 여럿 둘 수밖에 없다.
+
+
+
+
+
+
+
 
 
 
