update: Kotlin In Action - 4장. 클래스, 객체, 인터페이스

--- a/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
+++ b/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
@@ -490,7 +490,111 @@ class MyButton : View {
 - 부 생성자가 필요한 주된 이유는 자바 상호운용성이다.
 - 그리고 클래스 인스턴스를 생성할 때 파라미터 목록이 다른 생성 방법이 여럿 존재하는 경우에는 부 생성자를 여럿 둘 수밖에 없다.
 
+### 4.2.3 인터페이스에 선언된 프로퍼티 구현
 
+- 코틀린에서는 인터페이스에 추상 프로퍼티 선언을 넣을 수 있다.
+
+```kotlin
+interface User {
+	val nickname: String
+}
+```
+
+- 이는 `User` 인터페이스를 구현하는 클래스가 `nickname` 의 값을 얻을 수 있는 방법을 제공해야 한다는 뜻이다.
+
+- 인터페이스에 있는 프로퍼티 선언에는 뒷받침하는 필드나 Getter 등의 정보가 들어있지 않다.
+- 인터페이스는 아무 상태도 포함할 수 없으므로 상태를 저장할 필요가 있다면 인터페이스를 구현한 하위 클래스에서 상태 저장을 위한 프로퍼티 등을 만들어야 한다.
+
+- 위 인터페이스는 아래와 같이 구현할 수 있다.
+
+```kotlin
+// nickname 만 저장
+// 주 생성자 안에 프로퍼티를 직접 선언하였다.
+// 이 프로퍼티는 User 의 추상 프로퍼티를 구현하고 있으므로 override 를 표시해야 한다.
+class PrivateUser(override val nickname: String) : User
+
+// nickname 과 email 저장
+// 커스텀 게터로 nickname 프로퍼티를 설정한다.
+// 이 프로퍼티는 뒷받침하는 필드에 값을 저장하지 않고 매번 계산한다.
+class SubscribingUser(val email: String) : User {  
+    override val nickname: String  
+        get() = email.substringBefore('@')  
+}  
+
+// nickname 과 accountId 저장
+// SubscribingUser 의 nickname 과 다르게
+// 객체를 초기화하는 단계에 한 번만 getFaceBookName 을 호출한다.
+class FacebookUser(val accountId: Int) : User {
+    override val nickname: String = getFaceBookName(accountId)
+}
+```
+
+- `SubscribingUser` 의 `nickname`  과 `FacebookUser` 의 `nickname` 의 구현 차이에 주의하자.
+- 이 둘은 비슷하지만
+	- 전자는 매번 호출 될 때마다 계산하는 커스텀 게터를 활용하고
+	- 후자는 객체 초기화 시 계산한 데이터를 뒷받침하는 필드에 저장했다가 불러오는 방식을 활용한다.
+
+
+- 인터페이스에는 추상 프로퍼티뿐 아니라 게터와 세터가 있는 프로퍼티를 선언할 수도 있따.
+- 물론 그런 게터와 세터는 뒷받침하는 필드를 참조할 수 없다.
+
+```kotlin
+interface User {  
+    val email: String  
+    val nickname: String  
+        get() = email.substringBefore('@') // 프로퍼티에 뒷받침하는 필드가 없다. 대신 매번 결과를 계산해 돌려준다.
+}
+```
+
+- `email` : 추상 프로퍼티
+- `nickname` : 커스텀 게터
+
+- 하위 클래스는 추상 프로퍼티인 `email` 을 반드시 오버라이드해야 한다.
+- 반면 `nickname` 은 오버라이드하지 않고 상속할 수 있다.
+
+- 인터페이스에 선언된 프로퍼티와 달리 클래스에 구현된 프로퍼티는 뒷받침하는 필드를 원하는 대로 사용할 수 있다.
+
+### 4.2.4 게터와 세터에서 뒷받침하는 필드에 접근
+
+- 어떤 값을 저장하되 그 값을 변경하거나 읽을 때마다 정해진 로직을 실행하는 유형의 프로퍼티를 만드는 코드를 보자.
+
+```kotlin
+class User(val name: String) {  
+    var address: String = "unspecified"  
+        set(value: String) {  
+            println("""  
+                Address was changed for $name:  
+                "$field" ->"$value".  
+            """.trimIndent())
+            field = value // 뒷받침하는 필드 값 변경하기
+        }  
+}
+
+// >>> val user = User("Alice")
+// >>> user.address = "Elsenheimerstrasse 47, 80687 Muenchen"
+// Address was changed for Alice:
+// "unspecified" -> "Elsenheimerstrasse 47, 80687 Muenchen"
+```
+
+- 코틀린에서 프로퍼티의 값을 바꿀 때는 `user.address = "new value"` 처럼 필드 설정 구문을 사용한다.
+- 이 구문은 내부적으로는 `address` 의 세터를 호출한다.
+- 위 예제에서는 커스텀 세터를 정의해서 추가 로직을 실행한다.
+
+- 접근자의 본문에서는 `field` 라는 특별한 식별자를 통해 뒷받침하는 필드에 접근할 수 있다.
+- Getter 에서는 `field` 값을 읽을 수만 있고, Setter 에서는 `field` 값을 읽거나 쓸 수 있다.
+
+- 변경 가능 프로퍼티의 Getter 와 Setter 중 한쪽만 직접 정의해도 된다.
+- 위 코드에서 `address` 의 Getter 는 필드 값을 그냥 반환해주는 게터다.
+- 따라서 Getter 를 굳이 직접 정의할 필요가 없다.
+
+> [!note] 뒷받침하는 필드가 있는 프로퍼티 vs 그런 필드가 없는 프로퍼티
+> 클래스의 프로퍼티를 사용하는 쪽에서 프로퍼티를 읽는 방법이나 쓰는 방법은 뒷받침하는 필드의 유무와는 관계가 없다.
+> 
+> 컴파일러는 디폴트 접근자 구현을 사용하건 직접 Getter 나 Setter 를 정의하건 관계없이 Getter 나 Setter 에서 `field` 를 사용하는 프로퍼티에 대해 뒷받침하는 필드를 생성해준다.
+> 
+> 반대로 `field` 를 사용하지 않는 커스텀 접근자 구현을 정의한다면 뒷받침하는 필드는 존재하지 않는다.
+> (프로퍼티가 `val` 인 경우에는 Getter 에 `field` 가 없으면 되지만, 
+> `var` 인 경우에는 Getter 나 Setter 모두에 `field` 가 없어야 한다.)
 
 
 
