refactor: attachment 구조 변경 및 첨부파일 수정으로 인한 파일 수정

--- a/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
+++ b/01. Development/01. Book/Kotlin In Action/04장. 클래스, 객체, 인터페이스.md
@@ -596,6 +596,8 @@ class User(val name: String) {
 > (프로퍼티가 `val` 인 경우에는 Getter 에 `field` 가 없으면 되지만, 
 > `var` 인 경우에는 Getter 나 Setter 모두에 `field` 가 없어야 한다.)
 
+### 4.2.5 접근자의 가시성 변경
+
 
 
 
