--- a/01. Development/02. Lecture/코딩으로 학습하는 GoF의 디자인 패턴/빌더 패턴.md
+++ b/01. Development/02. Lecture/코딩으로 학습하는 GoF의 디자인 패턴/빌더 패턴.md
@@ -86,7 +86,7 @@ public class App {
 
 - 빌더 패턴은 (복잡한) 객체를 만드는 프로세스를 독립적으로 분리할 수 있다.
 
-![[빌더패턴 클래스 다이어그램.png]]
+![[코딩으로 학습하는 GoF의 디자인 패턴 - 빌더패턴 클래스 다이어그램.png]]
 
 - 빌더 패턴을 적용하면 인스턴스 제작을 step 별로 할 수 있게 되어 일관성 있게 객체를 만들 수 있다.
 	- Builder 인터페이스에 인스턴스를 만드는 방법들을 Step 별로 만들어 놓는다.
@@ -102,7 +102,7 @@ public class App {
 
 ### After
 
-![[빌더패턴 레이아웃.png]]
+![[코딩으로 학습하는 GoF의 디자인 패턴 - 빌더패턴 레이아웃.png]]
 
 - Builder 체이닝을 위해서 리턴 타입을 Builder 로 하였다.
 
