--- a/01. Development/02. Lecture/코딩으로 학습하는 GoF의 디자인 패턴/싱글톤 패턴.md
+++ b/01. Development/02. Lecture/코딩으로 학습하는 GoF의 디자인 패턴/싱글톤 패턴.md
@@ -19,7 +19,7 @@ notion link: https://kangbada0728.notion.site/12d71c4b80a24155bc78b899a39afba6?p
 - 시스템 런타임, 환경 세팅에 대한 정보 등, 인스턴스가 여러개 일 때 문제가 생길 수 있는 경우가 있다.
 - 이럴 때 인스턴스를 오직 한개만 만들어 제공하는 클래스가 필요하다.
 
-![[싱글톤패턴 클래스.png]]
+![[코딩으로 학습하는 GoF의 디자인 패턴 - 싱글톤패턴 클래스.png]]
 ## 싱글톤 패턴을 가장 단순히 구현하는 방법
 
 ### 싱글톤 패턴 구현 방법 1 - private 생성자에 static 메소드
